--- a/content/notes/「信仰」作為生命的基本態度.md
+++ b/content/notes/「信仰」作為生命的基本態度.md
@@ -1,10 +1,9 @@
-tags: #📝️/🌲️ 
-links: [[道德]]、[[基督教]]、[[意義]]、[[虛無主義]]
-ref:
-[[後現代的價值真空]]
-[[對意義的渴望]]
-
 ---
+title: "「信仰」作為生命的基本態度"
+draft: 
+---
+#📝️/🌲️ 
+
 弗洛姆在《自我的追尋》（Man For Himself）裡這麼說：
 
 人活著可以沒有信仰嗎？嬰兒不該「對他母親的乳房有信心」嗎？我們不該對我們的同伴、所愛的人、以及我們自己有信心嗎？我們活著可以不必相信我們生活規範的有效性嗎？的確，沒有了信仰，人就變得貧乏、無望，害怕碰觸到他存有的核心。
@@ -36,3 +35,9 @@ There was once in man a true happiness of which there now remains to him only; t
 而這些深刻的自我追尋，都必須由一個人信仰的核心價值所驅使，足見「信仰」作為生命的基本態度，是通往一個具備絕對意義的人生的起點。
 
 >人活著不能沒有信仰。我們這一代以及後代的關鍵問題在於：這個信仰究竟會成為對領袖、機械、成功的非理性信仰，或者是基於我們自身創造性活動所產生的理性信仰。
+
+---
+links: [[道德]]、[[基督教]]、[[意義]]、[[虛無主義]]
+ref:
+[[後現代的價值真空]]
+[[對意義的渴望]]
