--- a/content/notes/「生命意義」問題的本質.md
+++ b/content/notes/「生命意義」問題的本質.md
@@ -1,10 +1,11 @@
-tags: #📝️/🌲️ 
-inks: [[虛無主義]]、[[意義]]、[[哲學]]、[[科技]]、[[]]、[[]]
-ref: 
-[[對意義的渴望]]
+---
+title: "「生命意義」問題的本質"
+draft: 
+---
+#📝️/🌲️ 
 
 ---
-如果追根究底，其實不難發現「樂觀虛無主義」在語意上是個矛盾的概念。
+如果追根究底，其實不難發現[「樂觀虛無主義」](https://www.youtube.com/watch?v=MBRqu0YOH14)在語意上是個矛盾的概念。
 
 當你知道1+1＝2，你不會問「這樣是好還是壞」或「這是應該發生的嗎」。如果我們用真正的虛無主義觀點去看待人類的存在、真的以百分之百的客觀理性行事，那麼在得知「人生本無意義」的客觀事實之後，我們並沒有理由接著辯解「為什麼我應該／不應該繼續活著」。追問「為什麼要做任何事情」或「為什麼不做點什麼」都是不必要的反射性問題；接著思考自己「應不應該自殺」也同樣是不必要的抉擇。
 
@@ -23,3 +24,8 @@ ref:
 綜合上述，其實「生命意義」的問題打從一開始就不是純粹的「實然」問題、不是一個能被客觀觀察的科學事實；發現人類在宇宙中的渺小進而相信人生並無意義，那也只是你對生命意義的主觀詮釋。
 
 「意義」是一個存在於「應然」的、我們摸不著也看不見的信念，但它能具體地指引你我每分每秒的優先次序、情緒感受、時間分配。看見生命的意義與否，能決定一個人選擇耽溺自艾和寬宏堅毅，繼而用非常實質的方式影響他和他周遭他人的生命經驗——這個你我都能親自驗證的區別，向我們證明了「意義」的「真實」。
+
+---
+links: [[虛無主義]]、[[意義]]、[[哲學]]、[[科技]]、[[]]、[[]]
+ref: 
+[[對意義的渴望]]
