--- a/content/notes/「樂觀虛無主義」的謬誤.md
+++ b/content/notes/「樂觀虛無主義」的謬誤.md
@@ -1,11 +1,10 @@
-tags: #📝️/🌲️ 
-links: [[虛無主義]]、[[道德]]、[[意義]]、[[哲學]]、[[倫理學]]、[[]]、[[]]、[[]]
-Ref: 
-https://www.youtube.com/watch?v=MBRqu0YOH14
-[[後現代的價值真空]]
-
 ---
-「樂觀虛無主義」表面上既符合科學事實、又通融人性需要，看似是個適合當代人類的生活態度，然而當我沿著它指引的方向走下去，我發現「樂觀虛無主義」幾乎是個太奢侈、太安逸、且帶著某種「道德健忘」的淺碟人生觀。
+title: "「樂觀虛無主義」的謬誤"
+draft: 
+---
+#📝️/🌲️ 
+
+[「樂觀虛無主義」](https://www.youtube.com/watch?v=MBRqu0YOH14)表面上既符合科學事實、又通融人性需要，看似是個適合當代人類的生活態度，然而當我沿著它指引的方向走下去，我發現「樂觀虛無主義」幾乎是個太奢侈、太安逸、且帶著某種「道德健忘」的淺碟人生觀。
 
 原因如下：
 
@@ -34,3 +33,8 @@ https://www.youtube.com/watch?v=MBRqu0YOH14
 確實，有許多天賦獨具的人能在全神貫注的創造性活動中得到豐沛的意義，但是更多人的生命意義，會來自於生產性活動（通常是工作）與責任的承擔（通常是家庭）——這既不是秘密、也不應該是個有爭議的事實。Victor Frankl在他的納粹集中營回憶錄《活出意義來》（Men's search for meaning）中也有類似的理解。
 
 在「樂觀虛無主義」裡，我們發現了人生並無目的，但基於某個未被說明的原因，我們執意得定義自己活著的意義，然而要創造什麼生命意義、如何創造這份意義、你創造的意義跟他人創造的意義之間有什麼關連……那就再說，總之就是可以自己創造就對了，畢竟尼采就是這麼說的。
+
+---
+links: [[虛無主義]]、[[道德]]、[[意義]]、[[哲學]]、[[倫理學]]、[[]]、[[]]、[[]]
+Ref: 
+[[後現代的價值真空]]
