--- a/content/notes/健全貨幣、能源、創新、馬克思.md
+++ b/content/notes/健全貨幣、能源、創新、馬克思.md
@@ -1,10 +1,9 @@
-tags: #📝️/🌱 
-links: [[貨幣]]、[[能源]]、[[金融]]、[[科技]]、[[]]、[[]]、[[]]、[[]]
-ref: 
-[[大簡化——能源、貨幣、人腦共塑的危機]]
-[[Steve Keen on Marxism, Capitalism, and Economics]]
-
 ---
+title: "健全貨幣、能源、創新、馬克思"
+draft: true
+---
+#📝️/🌱 
+
 貨幣是能源被人類開發後作為儲存的媒介。
 貨幣應是有限的，相應於地球上有限的能源。
 貨幣總數的限制致使，唯一能提升人們購買力的方式，即是創新。
@@ -46,3 +45,9 @@ ref:
 - **Nuclear power** has the most potential, and should be considered the '**fairest**' energy - its waste is the ONLY kind that's responsibly contained and internalized, instead of emitting into the environment as pollution and material waste. 
 - However it's probably the most misunderstood and stigmatized energy. People exaggerate its danger, and refuse to see why 'responsibly containing the waste of our own electricity production' is a fair and proper act. Most people don't notice the contradiction as to why they don't ever need to bother with the waste of any other types of electricity production.
   Ref: [[Michael Shellenberger - Why renewables can’t save the planet]]
+
+---
+links: [[貨幣]]、[[能源]]、[[金融]]、[[科技]]、[[]]、[[]]、[[]]、[[]]
+ref: 
+[[大簡化——能源、貨幣、人腦共塑的危機]]
+[[Steve Keen on Marxism, Capitalism, and Economics]]
