--- a/content/notes/先求守成，再求改進.md
+++ b/content/notes/先求守成，再求改進.md
@@ -1,11 +1,8 @@
-tags: #📝️/🌲️ 
-links: [[]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]
-ref: 
-[[切斯特頓的圍欄]]
-[[社會的價值階級]]
-
 ---
-# 檢討秩序的起點
+title: "先求守成，再求改進"
+draft: 
+---
+#📝️/🌲️ 
 
 **價值階級，就是辨認某些事物比其他事物更重要。一個社會要能建立秩序，需要大部分的成員都同意一套共同的價值階級，讓人們能夠為他們同樣重視的東西共同努力、避開不夠重要的活動、甚至懲罰那些有違公同價值的行為。**
 
@@ -37,3 +34,10 @@ ref:
 **唯有當我們釐清秩序、傳統、規範背後的原則，才能對之進行像樣的檢討。** 盲目服從規範與教條無益個人智識的提升，當然也就不可能促進文明的進步。我們既不應該因為先輩已經替我們建立了成規和傳統就矇上眼照著幹、不花任何力氣去理解規範和傳統背後的原則，也不應該因為任何成規和傳統是先輩留下來的「過時產物」，就在還沒有看清它們的原則及意義、甚至也給不出一個像樣的替代方案時，就將它們恣意鄙棄。
 
 針對價值、原則、意義的討論是艱深困難的，但也往往是最重要的。**無論我們承襲或變革，都有責任去領會既有秩序背後的深意。先求守成，再求改進。**
+
+---
+links: [[]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]
+
+ref: 
+[[切斯特頓的圍欄]]
+[[社會的價值階級]]
