--- a/content/notes/切實地認識自己的父母.md
+++ b/content/notes/切實地認識自己的父母.md
@@ -1,6 +1,10 @@
-tags: #📝️/🌱 
-links: [[心理]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]
-ref: 
+---
+title: "切實地認識自己的父母"
+draft: 
+---
+#📝️/🌲️ 
+
+從我自己和身邊親近的人得到的經驗是，當你在心裡越能對父母親做平衡報導、切實地認識他們的是非善惡，你就越能理解自己的是非善惡從何而來、知道自己信仰什麼、也越清楚自己想要往哪邊去。
 
 ---
-從我自己和身邊親近的人得到的經驗是，當你在心裡越能對父母親做平衡報導、切實地認識他們的是非善惡，你就越能理解自己的是非善惡從何而來、知道自己信仰什麼、也越清楚自己想要往哪邊去。
+>links: [[心理]]
