--- a/content/notes/切斯特頓的圍欄.md
+++ b/content/notes/切斯特頓的圍欄.md
@@ -1,9 +1,9 @@
-tags: #📝️/🌲️ 
-links: [[社會]]、[[秩序]]、[[政治]]、[[]]、[[]]、[[]]
-ref: 
-[[Heather Heying and Bret Weinstein - Evolution and the Modern World]]
-
 ---
+title: "切斯特頓的圍欄"
+draft: 
+---
+#📝️/🌲️ 
+
 英國作家及神學家Gilbert Keith Chesterton在其1929年出版的《The Thing》中提到：
 
 > 在某種現況中，存在著一套制度或法律；為了簡單起見，讓我們將他簡化成某個矗立於馬路中央的柵欄。
@@ -19,3 +19,9 @@ ref:
 更進一步來說，切斯特頓的柵欄告誡我們，當我們企圖干預他人建立起的系統或措施時，最好假設前人考慮了某些我們尚未了解的事情、或者有我們無法理解的經歷，所以我們不應躁進地尋求快速解法，因為這可能反讓情況變糟。
 
 切斯特頓的柵欄不是要勸退任何企圖改善現況的人，但它是一個重要的呼籲：在干預現狀前，先理解背後的思維。我們並不總是比那些在我們之前做出決定的人更清楚狀況；唯有深刻地同理前人的經歷及其面對的挑戰，我們才會更洞悉全局、看清當前措施的細微之處。除非我們知道為什麽有人做出這樣的決定，否則我們無法安全地改善它、或斷定他們做錯了。
+
+---
+links: [[社會]]、[[秩序]]、[[政治]]
+
+ref: 
+[Heather Heying and Bret Weinstein - Evolution and the Modern World](https://youtube.com/watch?v=DbwXe5LhNNA)
