--- a/content/Research/📝/社會的價值階級.md
+++ b/content/Research/📝/社會的價值階級.md
@@ -1,11 +1,9 @@
-tags: #📝️/🌲️ 
-links: [[價值]]、[[道德]]、[[秩序]]、[[社會]]
-Ref:
-[[個人的價值階級]]
-[[秩序是靈魂的第一需要]]
-[[道德的動物學基礎]]
+---
+title: "社會的價值階級"
+draft: 
+---
+#📝️/🌲️ 
 
-- - -
 無論在家庭、學校、軍隊、或職場，我們隨時都在摸索著當下身處之群體的目標為何、秩序是如何建構、人與人之間的關係是什麼，進以衡量自己的所在位置、用適當的方式言行。唯有如此，我們才能發現自己在群體中的功能和角色、發揮個人的所長、定義自身存在（之於當下群體）的價值——「社會化」正是一個人將「個體目標」向「群體目標」校準對齊的過程，它從我們牙牙學語以來就從未停止過。
 
 一間公司的共同目標若是「創造最大利潤」，那麼公司內的每一個人都需要被放在能夠成就這個目標的位置、各司其職，你跟其他人應該如何合作互動都會得到定義和規範，你也會被賦予相對應的使命和職責、定義著你之於這個群體的存在意義。同樣地，一個家庭裡的共同目標若是「和諧安康」，那麼家庭成員就必須為此齊心協力、扮演好各自的角色、充分認知到自己能夠為家庭創造的貢獻。
@@ -46,3 +44,10 @@ Ref:
 
 1.  [耶魯最受歡迎的金融通識課](https://www.books.com.tw/products/0010837495)
 2.  [Jordan Peterson Explains What Draws People to Socialism](https://www.heritage.org/progressivism/commentary/jordan-peterson-explains-what-draws-people-socialism)
+
+---
+links: [[價值]]、[[道德]]、[[秩序]]、[[社會]]
+Ref:
+[[個人的價值階級]]
+[[秩序是靈魂的第一需要]]
+[[道德的動物學基礎]]
