--- a/content/Research/📝/人與世界的理想關係.md
+++ b/content/Research/📝/人與世界的理想關係.md
@@ -55,5 +55,6 @@ Our good comes from God, as its the potential seeded in us, however we're not de
 Potential can only be fully fulfilled by freedom, and that's why freedom and individual sovereignty are the most fundamental values for a human society.
 
 ---
-links: [[理想]]、[[社會]]、[[親職]]、[[道德]]、[[基督教]]、[[儒家]]、[[倫理學]]、[[]]
-ref: [[]]
+links: [[理想]]、[[社會]]、[[親職]]、[[道德]]、[[基督教]]、[[儒家]]、[[倫理學]]
+
+ref: 
