--- a/content/Research/📝/科技是形塑人類歷史的無形力量.md
+++ b/content/Research/📝/科技是形塑人類歷史的無形力量.md
@@ -69,7 +69,8 @@ Stepping stones
 - 道德——即我們用來回應「應然」問題的作業系統——在這個時間點、且是人類前所未有地受制於自由市場經濟的多極陷阱中的時刻，才會尤其的複雜難解、又如此重要，而需要每一個個人認知到自己肩上的道德重任。
 
 ---
-links: [[科技]]、[[道德]]、[[]]、[[]]、[[]]、[[]]、[[]]、[[]]
+links: [[科技]]、[[道德]]
+
 ref: 
 [[Meditations on Moloch]]
 [[We Wrestle Not With Flesh and Blood, but Against Powers and Principalities]]
