--- a/content/「樂觀虛無主義」的謬誤.md
+++ b/content/「樂觀虛無主義」的謬誤.md
@@ -14,7 +14,7 @@ draft:
 
 # 何謂「樂觀虛無主義」
 
-什麼是「樂觀虛無主義」？讓我們瞧瞧下面這支超過一千萬觀看的同名影片：
+什麼是「樂觀虛無主義」？讓我們瞧瞧[這支超過一千萬觀看的同名影片](https://youtu.be/MBRqu0YOH14)。
 
 根據影片，虛無主義告訴我們：
 
