--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -1,7 +1,7 @@
 ---
 title: "盡責地善待自己"
 draft: 
-tags: 
+tags: #個人生活 #
 ---
 對於所愛的人，我們為他們祈求的不會只是他們能享有「好的處境」，更是他們得以成為「能承擔更艱難處境的自己」。我們用這個方針去鼓勵、引導、指正、鞭策我們在乎的親人和朋友，因為我們總是知道，你我都無法百分之百地保護任何人免於生命的頓挫和苦難。真正為他們好的唯一方式，是幫助他們成為更堅毅的自己。
 
@@ -45,13 +45,12 @@ tags:
 
 個人與其理想間的關係，解釋了宗教信仰被遺忘的深刻意涵：宗教崇拜，是人類數千年來對於某種大家共同相信的「理想存有」（理想的價值或理想的人類原型）的傳頌；宗教的教義，則是信徒用來自我修正、以微薄之力去體現和致敬這個「理想存有」的依歸，亦可視為歷代人類以生命經驗去累積出的、通往理想生命的地圖。
 
-雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信虛無主義（[[「樂觀虛無主義」的謬誤]]）或無神論，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
+雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信[虛無主義](「樂觀虛無主義」的謬誤)或[無神論](「信仰」作為生命的基本態度)，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
 
 然而，抗拒對生命理想的思考並不會使你的良知噤聲，假裝自己「已經夠好了」也不會真正讓你安然自得，因為我們無法擺脫對生命意義的需要，而生命意義必然會在你邁向理想的實踐中產生。齊克果所謂的「真正的人生是『宗教性』的人生」，我想與此無異。
 
 ---
-
-### 人性的善惡問題
+# 人性的善惡問題
 
 理想、良知、和意義或許足以作為個人生活的指引，但倘如我們要宣稱每一個人的生命都確實存在著無庸置疑的價值，就勢必得為人性的善惡問題提出更全面的討論。
 
@@ -59,27 +58,27 @@ tags:
 
 縱然我們活在安逸舒適的二十一世紀，也不代表我們理當自命清高地滑著手機、把過去一百年的眾多苦難看成我們可以遠遠拋在後頭的歷史軼事、彷彿那些殘酷邪惡盡是一些本質上跟你我截然不同的次等人類所造成的。事實上正巧相反，我們有好理由相信自己和那些巨大邪惡之間相距不遠 [4][5]：你會以為自己是個「好人」，比較有可能是因為你沒有剛好落入那些能輕易使你作惡的情境裡，而不是因為你比那些「壞蛋」高人一等。畢竟，要在你我自己身上找到貪嗔癡慢疑的證據，想必不會太難才對。
 
-無論納粹或共產主義，二十世紀都已經留給我們一個沉痛的歷史教訓：當人類受到盲目熱情、偶像崇拜、部落主義、意識形態所驅使時，我們便可能為其他人類帶來巨大的苦難、實現令人驚懼的惡。這些駭人聽聞的邪惡，都在在提醒著我們永遠不該對人性抱持浪漫的無知，低估任何人——包含你我自己——為惡的可能性，甚至忽略群眾心理和情境條件等足以將好人輕易變成劊子手的非理性因素。凡是為人，都可能在某些不幸的處境下棄善行惡。
+無論納粹或共產主義，二十世紀都已經留給我們一個沉痛的歷史教訓：當人類受到盲目熱情、偶像崇拜、部落主義、意識形態所驅使時，我們便可能為其他人類帶來巨大的苦難、實現令人驚懼的惡。這些駭人聽聞的邪惡，都在在提醒著我們永遠不該對人性抱持浪漫的無知，低估任何人——包含你我自己——為惡的可能性，甚至忽略群眾心理和情境條件等足以將好人輕易變成劊子手的非理性因素。**凡是為人，都可能在某些不幸的處境下棄善行惡。**
 
 但這是否代表我們可以斷然為人類的存在做下結論，相信人類是輕易受到環境制約、被群眾心理支配、樂於追隨熱情而摒棄理性、僅僅是比較聰明卻也製造無數禍害的靈長類呢？我不認為，因為正如Viktor Frankl在《活出意義來》中說的：
 
-（在納粹集中營裡）光知道一個人究竟是警衛或俘虜，顯然不能據以瞭解此人的性格。人類的同情心，在任何一群人當中皆可發現……善惡的分界線，竟劃過了天下眾生、直抵人性的最深層；即連在集中營中所揭露的深淵底層，亦如此清晰可辨，寧不令人慨歎嗎？
+>（在納粹集中營裡）光知道一個人究竟是警衛或俘虜，顯然不能據以瞭解此人的性格。人類的同情心，在任何一群人當中皆可發現……善惡的分界線，竟劃過了天下眾生、直抵人性的最深層；即連在集中營中所揭露的深淵底層，亦如此清晰可辨，寧不令人慨歎嗎？
 
 人類在無數劫難中不斷前進、建立更加穩固而安康的社會，我們能走到二十一世紀的今天，本身已是個了不起的成就。今天的人類世界，享有過往的人們遠遠難以想像的安康、富裕、便利、還有生活的可能性，就連此時此刻世界上最貧困的國家，都已經遠離幾百年前人類世界中最糟糕的處境。即便跟許多人受到新聞和社群媒體毒害的世界觀相互抵觸，但其實有大量證據告訴我們這個世界正在變得更好 [6][7][8]。
 
 雖然此刻的人類的確握有前所未有的強大力量、足以帶著整個世界共赴滅亡，更面臨著前所未有的科技、人文、政治、心理的嶄新挑戰，但那並不代表我們該對二十一世紀抱持著悲觀的末日觀點。相反地，當我們深刻地瞭解人類作為一種動物，你我內心深處能夠累積多麼龐大的憤怒、憎恨、傷害他人的意圖；認識到人性的黑暗能引領我們為這個世界創造多少的苦難；並從人類剛在過去一百年內鑄下的種種邪惡去深省……
 
-如果你瞭解自己身而為人能夠承載多大的邪惡，你該接著發現的是，我們睜眼所見的世界卻是充斥了如此多的良善。這簡直就是奇蹟。
+**如果你瞭解自己身而為人能夠承載多大的邪惡，你該接著發現的是，我們睜眼所見的世界卻是充斥了如此多的良善。這簡直就是奇蹟。**
 
 當你看見自己此刻身處的世界竟能用如此有效、互信、甚至充滿善意的方式流暢運作，當你每一天醒來這個社會都跟昨天一樣國泰民安、老百姓們一樣為生活踏實努力著，你該明白原來這一切如此得來不易、你該感謝人類整體費了多大的努力才走到今天、你該慶幸自己生在如此幸運的時代，並且謹記歷史的教訓。
 
-人性的潛在之惡，只更凸顯了人心向善的趨力——當這個世界、社會、人與人之間能以和平共榮的方式運作時，幾乎沒有人會拒絕以同樣良善、互惠、有尊嚴的方式投身其中。
+**人性的潛在之惡，只更凸顯了人心向善的趨力——當這個世界、社會、人與人之間能以和平共榮的方式運作時，幾乎沒有人會拒絕以同樣良善、互惠、有尊嚴的方式投身其中。**
 
-更重要的是，我們應該看見自己在這一切當中，如何承擔了同樣舉足輕重的責任。
+**更重要的是，我們應該看見自己在這一切當中，如何承擔了同樣舉足輕重的責任。****
 
 ---
 
-### 責任與個人價值
+# 責任與個人價值
 
 每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
 
