--- a/content/「神聖個人」作為人類世界的基石.md
+++ b/content/「神聖個人」作為人類世界的基石.md
@@ -4,7 +4,7 @@ draft:
 tags: #神聖個人 #道德 #儒家 #基督教
 ---
 
-# 人類文明與個人生命的基石
+## 人類文明與個人生命的基石
 
 很長一段時間來，我一直想以自己有限的智識去發現那個在社會及個人生命中最根本的公理、最深層的基礎、最不可能被推倒的第一塊積木。要回答這種根本性的問題，最合理的作法或許就是回頭追溯人類偉大傳統所提供的解答：神學家Thomas Aquinas稱此「不動的推動者」作上帝，老莊思想則謂之為「道」。
 
@@ -24,7 +24,7 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 ---
 
-# 基督宗教中的神聖個人
+## 基督宗教中的神聖個人
 
 西方文明的起點是希伯來文明與希臘文明，即所謂的「兩希文明」。
 
@@ -50,7 +50,7 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 ---
 
-# 儒家思想中的神聖個人
+## 儒家思想中的神聖個人
 
 重視家庭和國家、傾向集體主義的東方社會，兩千多年來受儒家思想影響甚深。然而隨著現代化的進程，許多人相信儒家思想不但早就過時、更已淪為威權統治（無論在國家或家庭裡）的刀俎，為此被侷限自由和道德勒索的年輕人尤其厭惡之。
 
@@ -84,7 +84,7 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 ---
 
-### 看待個人的正確觀點
+## 看待個人的正確觀點
 
 我相信，東西方文明都指出了「神聖個人」的重要性，這絕非巧合，因為這是根本上正確的看待每個人的方式。為什麼呢？
 
