--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -1,7 +1,7 @@
 ---
 title: "盡責地善待自己"
 draft: 
-tags: #個人生活 #
+tags: #個人生活 #人性 #道德 #責任
 ---
 對於所愛的人，我們為他們祈求的不會只是他們能享有「好的處境」，更是他們得以成為「能承擔更艱難處境的自己」。我們用這個方針去鼓勵、引導、指正、鞭策我們在乎的親人和朋友，因為我們總是知道，你我都無法百分之百地保護任何人免於生命的頓挫和苦難。真正為他們好的唯一方式，是幫助他們成為更堅毅的自己。
 
@@ -80,7 +80,7 @@ tags: #個人生活 #
 
 # 責任與個人價值
 
-每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
+每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：**決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難**。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
 
 我們每一個人在每一刻都承擔著這個責任、都面臨著這個抉擇，我們或許無法對社會的整體福祉有直接的貢獻，但我們能決定性地影響我們周遭人們的安康，而每一個小圈圈的安康，最終會累積成整個社會的安康。
 
@@ -88,11 +88,11 @@ tags: #個人生活 #
 
 當然，一個人或許沒有辦法在當下就使周遭的一切好轉，生活更不可能總是順心如意、必有挑戰與磨難，但我們可以決定的是，要用悲苦無助的姿態承受生命之重，還是拿出勇氣與尊嚴來承擔。縱然一個人身在苦難之中、完全無力改變現狀，我們選擇去承受苦痛的姿態也足以帶給身邊人們截然不同的感受和動力，這點在人們深受病痛所困時尤其顯著，也正是你我都不可能逃避的生命課題。
 
-是以，每一個人都為身邊人們承擔著這份舉足輕重的責任，每一個人都能夠選擇要致力為周遭帶來更多的安康、抑或是更多不必要的苦難，而你帶給身邊人們的東西，必將被其他人用同樣的方式擴散出去。你的一言一行總是以非常實際的方式牽動著整個世界走向更好或更壞——這就是為什麼作為一個[神聖的個人](https://vocus.cc/@Emperors_Wolf/6136497efd897800019b4ac7)，無論你如何看待自己，你都是個擁有絕對價值的存在。
+是以，每一個人都為身邊人們承擔著這份舉足輕重的責任，每一個人都能夠選擇要致力為周遭帶來更多的安康、抑或是更多不必要的苦難，而你帶給身邊人們的東西，必將被其他人用同樣的方式擴散出去。**你的一言一行總是以非常實際的方式牽動著整個世界走向更好或更壞——這就是為什麼作為一個[神聖的個人](「神聖個人」作為人類世界的基石)，無論你如何看待自己，你都是個擁有絕對價值的存在。**
 
 ---
 
-### 盡責地善待自己
+# 盡責地善待自己
 
 所以，一個人應該要盡責地照顧和善待自己，正如照顧一個他有責任扶養、關愛、教育、鞭策的孩子。「盡責」意味著不只是要你照顧的對象過得開心快樂，你更會期許他們比昨天的自己更好。
 
@@ -100,17 +100,17 @@ tags: #個人生活 #
 
 我們之所以用這樣的方式對待孩子，是因為我們往往能看見他們尚在自己身上看見的潛能；我們不會滿足、也不應該讓他們自滿於自己當下所是的樣子，而是會教育、鼓勵、鞭策他們進一步蛻變成他們「所能夠成為」的自己。我們相信孩子體內存在著一份值得被喚醒的潛能，能使他們成為更逼近「理想」的自己。
 
-透過上面的討論，希望我已經闡明為什麼你我也應該相信自己身上擁有這份值得被要求的潛能，這份潛能又直接牽動著周遭他人的安康，以及我們生命意義的彰顯。
+透過上面的討論，希望我已經闡明為什麼你我也應該相信自己身上擁有這份值得被要求的潛能，**這份潛能又直接牽動著周遭他人的安康，以及我們生命意義的彰顯。**
 
-以我個人而言，有許多我長期以來知道我應該去做卻遲遲沒做的事情——間歇性斷食、洗冷水澡、戒咖啡因等——都在我看清自己肩膀上的這份責任後逐一得到了紮實的執行。我了解到的是，我不是為了「提升自我」而奉行這些習慣。而是單純地將「保養自己」視為我必須為自己、以及我所愛之人承擔的責任。
+以我個人而言，有許多我長期以來知道我應該去做卻遲遲沒做的事情——間歇性斷食、洗冷水澡、戒咖啡因等——都在我看清自己肩膀上的這份責任後逐一得到了紮實的執行。我了解到的是，我不是為了「提升自我」而奉行這些習慣。而是**單純地將「保養自己」視為我必須為自己、以及我所愛之人承擔的責任。**
 
-同樣地，當我盡力將工作做好、維繫和另一半的關係、關懷父母並讓他們知道我過得很好、將剩下的時間投注於熱情和興趣上，這一切都不再只是因為這是「為了我好」或者「我應該這樣」，而是因為當我不斷地成為「更完整的自己」（這份「完整」包含了我們和他人的關係），我也擁有了更多力量能讓自己和我所愛的人過得更好，或至少能盡可能為任何可能將降臨的人生磨難做好準備。
+同樣地，當我盡力將工作做好、維繫和另一半的關係、關懷父母並讓他們知道我過得很好、將剩下的時間投注於熱情和興趣上，這一切都不再只是因為這是「為了我好」或者「我應該這樣」，而是因為**當我不斷地成為「更完整的自己」**（這份「完整」包含了我們和他人的關係）**，我也擁有了更多力量能讓自己和我所愛的人過得更好，或至少能盡可能為任何可能將降臨的人生磨難做好準備。**
 
 我當然遠遠不是完美的，但我想傳達的很簡單：你我幾乎總是知道自己應該建立哪些正確習慣、知道自己應該實踐但還沒行動的事情、知道自己應該正視卻一再遺忘的缺點……這些「幫助自己」的行動，不該僅僅停留於個人的層次，而是一個人應該為自己和他人承擔的責任。這份責任真正地深化了個人價值、彰顯生命的獨特性、並且為每一個人的存在注入了不可剝奪的神聖意義。
 
 因此，你有責任打理好自己的生活和身心，將自己視為值得被幫助的對象，盡可能不再為世界創造不必要的苦難。當你照顧好自己，你才會進一步有能力為自己和你所愛之人帶來幸福和慰藉。又即使在你沒有能力改變現狀、承受著無可避免的苦難時，你也最低限度能決定自己要用什麼姿態受苦。
 
-請記住，你為自己和周遭他人所帶來的任何一點安康，都絕非微不足道；你為減輕世上苦難所付出的任何一分努力，都絕非徒勞無功——我們身上都背負著這份不容忽視的潛能，以及實現這份潛能的責任。
+**請記住，你為自己和周遭他人所帶來的任何一點安康，都絕非微不足道；你為減輕世上苦難所付出的任何一分努力，都絕非徒勞無功——我們身上都背負著這份不容忽視的潛能，以及實現這份潛能的責任。**
 
 ---
 
