--- a/content/「樂觀虛無主義」的謬誤.md
+++ b/content/「樂觀虛無主義」的謬誤.md
@@ -13,7 +13,7 @@ tags: #虛無主義 #生命
 
 ---
 
-# 何謂「樂觀虛無主義」
+## 何謂「樂觀虛無主義」
 
 什麼是「樂觀虛無主義」？讓我們瞧瞧[這支超過一千萬觀看的同名影片](https://youtu.be/MBRqu0YOH14)。
 
@@ -38,7 +38,7 @@ tags: #虛無主義 #生命
 
 ---
 
-# 「樂觀虛無主義」的謬誤
+## 「樂觀虛無主義」的謬誤
 
 
 「樂觀虛無主義」表面上既符合科學事實、又通融人性需要，看似是個適合當代人類的生活態度，然而當我沿著它指引的方向走下去，我發現**「樂觀虛無主義」幾乎是個太奢侈、太安逸、且帶著某種「道德健忘」的淺碟人生觀。**
@@ -73,7 +73,7 @@ tags: #虛無主義 #生命
 
 ---
 
-# 「生命意義」問題的本質
+## 「生命意義」問題的本質
 
 
 如果追根究底，其實不難發現「樂觀虛無主義」在語意上是個矛盾的概念。
@@ -108,7 +108,7 @@ tags: #虛無主義 #生命
 
 ---
 
-# 後記
+## 後記
 
 雖然文章裡我僅簡短帶到兩次尼采的名字，但尼采對當代虛無主義觀點的影響絕對是舉足輕重，更是許多不滿現實、喜好顛覆色彩的年輕人用來搭配唯物論和自然主義服用的良方。加上Richard Dawkins領軍的新無神論運動的推波助瀾，現代人對真理、意義、典範、及其伴隨而來的責任的否定和抗拒，可說是理所當然、理直氣壯——十年前，我個人「理性啟蒙」的起點也無異於此。
 
