--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -9,7 +9,7 @@ tags: #個人生活 #人性 #道德 #責任
 
 ---
 
-# 有所虧欠地活著
+## 有所虧欠地活著
 
 我們身邊可能都有這樣的朋友：當寵物生病時，他樂意照三餐替寵物餵藥，自己感冒時卻可以找一堆理由不去看醫生。這種人彷彿珍視寵物的生命遠勝於自己，但沒有發現如果他沒將自己照顧好，他的寵物也可能會難過的。
 
@@ -29,7 +29,7 @@ tags: #個人生活 #人性 #道德 #責任
 
 ---
 
-# 理想與良知
+## 理想與良知
 
 人活在世上，不可能不秉持著一套對自我、對世界、對人生風景的理想，因為無論我們做什麼、如何選擇、往哪兒去，都必定是在更宏觀的角度裡，試圖逼近自己心中的某種形式的「更好」、「更值得前往」的境地，無論那是你每一天把自己拖出被窩準備上班、和伴侶討論生小孩的計畫、或決定為照顧年邁母親而辭職搬回家鄉。
 
@@ -50,7 +50,7 @@ tags: #個人生活 #人性 #道德 #責任
 然而，抗拒對生命理想的思考並不會使你的良知噤聲，假裝自己「已經夠好了」也不會真正讓你安然自得，因為我們無法擺脫對生命意義的需要，而生命意義必然會在你邁向理想的實踐中產生。齊克果所謂的「真正的人生是『宗教性』的人生」，我想與此無異。
 
 ---
-# 人性的善惡問題
+## 人性的善惡問題
 
 理想、良知、和意義或許足以作為個人生活的指引，但倘如我們要宣稱每一個人的生命都確實存在著無庸置疑的價值，就勢必得為人性的善惡問題提出更全面的討論。
 
@@ -78,7 +78,7 @@ tags: #個人生活 #人性 #道德 #責任
 
 ---
 
-# 責任與個人價值
+## 責任與個人價值
 
 每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：**決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難**。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
 
@@ -92,7 +92,7 @@ tags: #個人生活 #人性 #道德 #責任
 
 ---
 
-# 盡責地善待自己
+## 盡責地善待自己
 
 所以，一個人應該要盡責地照顧和善待自己，正如照顧一個他有責任扶養、關愛、教育、鞭策的孩子。「盡責」意味著不只是要你照顧的對象過得開心快樂，你更會期許他們比昨天的自己更好。
 
