--- a/content/「神聖個人」作為人類世界的基石.md
+++ b/content/「神聖個人」作為人類世界的基石.md
@@ -38,7 +38,7 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 另一個基督宗教最根本性的觀點是「罪」。對聖經故事稍有聽聞的人應該都知道「原罪」的來源：亞當和夏娃背叛天主、偷嘗禁果，所以被逐出伊甸園、失去與天主共融的幸福，人類從此背負了必死的命運、原罪則一代接一代遺傳後世。
 
-這就如罪是從一人入了世界，死又是從罪來的；於是死就臨到眾人，因為眾人都犯了罪。——《羅馬書》第5章第12節
+>這就如罪是從一人入了世界，死又是從罪來的；於是死就臨到眾人，因為眾人都犯了罪。——《羅馬書》第5章第12節
 
 正因為人一出生就背負了原罪，因此縱然每個人都具備不可剝奪的價值，仍得付出相當的努力才能獲得上帝赦免，比方說信神、贖罪、勤勉工作、做上帝所喜悅的事、過上帝所悅納的生活等等（至於其中的細節，那就是不同教派間意見分歧的部分了）。
 
@@ -58,13 +58,13 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 所以儒家是如何談論個人的神聖性？最顯著的例子是論語，衛靈公篇第十五・29：
 
-子曰：「人能弘道，非道弘人。」
+>子曰：「**人能弘道，非道弘人。**」
 
 意思說，**人生的正途與理想，必得仰賴個人的主動意志去弘揚，導正世道的責任因此落在每一個人的肩上**。若無身體力行的投入，「道」即使再偉大也無法提升任何人。所以錢穆在《論語新解》中對這段註解說：「道由人興，亦由人行」、「若道能弘人，則人人盡成君子，世世盡是治平，學不必講，德不必修，坐待道弘矣」。
 
 顏淵篇第十二・1亦寫道：
 
-顏淵問仁。子曰：「**克己復禮為仁**。一日克己復禮，天下歸仁焉。為仁由己，而由人乎哉？」
+>顏淵問仁。子曰：「**克己復禮為仁**。一日克己復禮，天下歸仁焉。**為仁由己**，而由人乎哉？」
 
 乍看之下，孔子說「仁」就是克制自己、以禮事人，但這個說法預設了人的本性是惡的、需要被抑制的，這跟下一句的「為仁由己」所展現的主動意義完全矛盾。傅佩榮針對這段的翻譯有不同理解，他引述《大學》中「克明俊德」，認為應將「克」字理解為「能夠」而非「克制」，於是「克己復禮」其實是說「**人應該自覺而自願、自主而自動地實踐禮的要求**」，這也才跟「為仁由己」有意義上的連貫。
 
@@ -90,19 +90,23 @@ tags: #神聖個人 #道德 #儒家 #基督教
 
 在我看來，我們只可能有三種看待每個人類個體的方式：
 
+
+
 第一，是相信個人毫無神聖性。
 
 這個觀點廣為流傳於受當代物質主義、新無神論、及虛無主義影響的知識份子及年輕世代。他們相信不存在著任何「神授」的人類價值、人類生命僅是宇宙中的意外事件、人生在根本上並無意義。奠基於這些「事實」，他們在價值上往往會朝類似道德相對論的立場靠攏，但不是因為他們覺得道德相對論真的很有道理，而是他們對於要在這個自由開放的時代裡採取篤定的道德立場感到很沒有安全感。更何況，優先亮出「支持自由多元開放進步」的「友善」牌照，不但能讓你避免被進步主義道德警察給獵巫，還可以獲得免費的道德點數。
 
 現代人雖然經常不樂意透過宗教或傳統的觀點去承認個人神聖性，但他們幾乎不可能不經由其他途徑去為自己的生命加諸意義、注入某種「絕對」的價值，所以很多人才會秉持著像是「問心無愧地活著」、「追求熱情」、「創造自己的人生意義」的信條在生活，或是為了安頓內心「意義真空」的焦慮、努力說服自己「我已經夠好了」。
 
-換句話說，幾乎所有看似不相信個人神聖性的人，其實都用預設了個人神聖性的方式活著、努力將自己視為一個重要且積極的存在，他們只不過是特別排斥太文言或傳統的措辭罷了（見[[📢/「樂觀虛無主義」的謬誤]]）。但也因為缺乏對個人神聖性的深刻思索，他們難免會偶爾忘了這件事，進而疏於照顧和鞭策自己。
+換句話說，幾乎所有看似不相信個人神聖性的人，其實都用預設了個人神聖性的方式活著、努力將自己視為一個重要且積極的存在，他們只不過是特別排斥[太文言或傳統的措辭罷了](「樂觀虛無主義」的謬誤)。但也因為缺乏對個人神聖性的深刻思索，他們難免會偶爾忘了這件事，進而疏於照顧和鞭策自己。
 
 至於真正相信個人毫無神聖性的人，[他們對此信念的實踐值得我們恐懼](https://zh.wikipedia.org/zh-tw/%E7%BA%A6%E5%87%AF%E6%8B%89%E6%A0%A1%E5%9B%AD%E6%9E%AA%E5%87%BB%E4%BA%8B%E4%BB%B6)，而那已經不是我們可以輕易拆解的問題。
 
+
+
 第二，是相信只有部分個人是神聖的。
 
-任何將世界看作為「善與惡的戰場」、並相信自己是「正義的一方」的人，都難以避免在某些時候選擇性遺忘了他人的神聖性，或根本直接全盤否定任何他們認定為「邪惡」的對象。一旦他們相信一個對象夠邪惡，一切是非對錯就可能被昇華到部落主義的聖戰層級，他們會拒絕任何形式的對話、甚至相信暴力是可以被合理化的。如果有關心過去五年的國內外新聞，上述現象可以輕易地在政治光譜的兩端看到不可勝數的例子。我們亦可由二戰以降的各種偶像崇拜、極權專制、對敵人的妖魔化宣傳所窺見。（推薦閱讀：《[好人總是自以為是](https://search.books.com.tw/redirect/move/key/Jonathan+Haidt/area/mid/item/0010669638/page/1/idx/4/cat/001/pdf/1/spell/3)》、《[為什麼我們製造出玻璃心世代?](https://search.books.com.tw/redirect/move/key/Jonathan+Haidt/area/mid/item/0010850061/page/1/idx/2/cat/001/pdf/1/spell/3)》）
+任何將世界看作為「善與惡的戰場」、並相信自己是「正義的一方」的人，都難以避免在某些時候選擇性遺忘了他人的神聖性，或根本直接全盤否定任何他們認定為「邪惡」的對象。一旦他們相信一個對象夠邪惡，一切是非對錯就可能被昇華到部落主義的聖戰層級，他們會拒絕任何形式的對話、甚至相信暴力是可以被合理化的。如果有關心過去五年的國內外新聞，上述現象可以輕易地在政治光譜的兩端看到不可勝數的例子。我們亦可由二戰以降的各種偶像崇拜、極權專制、對敵人的妖魔化宣傳所窺見。（《[好人總是自以為是](https://search.books.com.tw/redirect/move/key/Jonathan+Haidt/area/mid/item/0010669638/page/1/idx/4/cat/001/pdf/1/spell/3)》、《[為什麼我們製造出玻璃心世代?](https://search.books.com.tw/redirect/move/key/Jonathan+Haidt/area/mid/item/0010850061/page/1/idx/2/cat/001/pdf/1/spell/3)》）
 
 **當你順從群眾、自命正義、將對立面視為寇讎，你不只抹滅了對方的人性，你其實也拋棄了自己作為神聖個人的「獨立思考」的主控權。** 換句話說，你可能正扮演著意識形態的棋子，受到操弄而毫不自知。
 
@@ -111,6 +115,8 @@ tags: #神聖個人 #道德 #儒家 #基督教
 大人世界裡的政治紛擾和是非爭端的解方，終究回到我們從小就耳熟能詳、長大卻拋諸腦後的基本道理：孔子說要反省自身、積極修為，君子根本無暇評斷他人；耶穌則訓誡我們要去掉自己眼中的樑木、不要論斷人，有資格審判人的只有上帝。**無論你是否相信上帝，都不應該自認有資格勝任審判世人的工作、不應該過度自滿於你想為人類創造的烏托邦、不應該將所有與你相左的意見視為邪惡——這應是身而一個遠非完美的人類所該秉持的最基本的謙卑。**
 
 至於另一種詮釋「只有部分個人是神聖的」的方式，是把自己歸類在毫無神聖性的那一邊。據我所知這只會有兩種可能性，一種是憂鬱症，另一種是極權社會主義國家。我應該不用說明為什麼兩者都不是好選項。
+
+
 
 第三，當然，是相信每個個人皆是神聖的。
 
