--- a/content/別低估你今天可以做對的事（上）.md
+++ b/content/別低估你今天可以做對的事（上）.md
@@ -9,7 +9,7 @@ tags: #個人生活 #時間偏好
 
 ---
 
-# 及時行樂 vs 延遲享樂
+## 及時行樂 vs 延遲享樂
 
 人是動物、是生物驅力和原始慾望的容器、是血和肉和骨和承襲了七百萬年的演化心理的組成物；人亦是超越動物的神性載體、是理性和自我意識的駕駛、是地球上唯一被「時間」束縛的生物。人的存在，是獸性和神性的矛盾、拉扯、調節、與融合。
 
@@ -23,7 +23,7 @@ tags: #個人生活 #時間偏好
 
 ---
 
-# 拆解棉花糖實驗
+## 拆解棉花糖實驗
 
 談到延遲享樂，大概讓許多人想起知名的「[棉花糖實驗](https://zh.wikipedia.org/wiki/%E6%A3%89%E8%8A%B1%E7%B3%96%E5%AE%9E%E9%AA%8C)」、以及它如何證明了自制力和個人成就的關連性。但不同於多數人的理解，**自制力作為個人特質，其實與一個人身處的情境或脈絡息息相關**。換句話說，自制力——一如其他的個人特質與德性——在你我身上絕非只是訴諸命定、「有或沒有」的是非題。
 
@@ -49,7 +49,7 @@ tags: #個人生活 #時間偏好
 
 ---
 
-# 情境主義的警告
+## 情境主義的警告
 
 講到這裡，雖然我們否證了本質主義對於個人特質和道德的僵固思維，但這個結論可能令那些相信人之初性本善、道德品格值得努力的人感到汗顏，也或許會使我們無所適從、根本不曉得是否能信任自己去做正確的事，我們甚至連「正確」的標準是否存在都感到懷疑。
 
@@ -57,23 +57,23 @@ tags: #個人生活 #時間偏好
 
 我不認為我們可以這麼快下結論。
 
-上述例證雖然駁斥了本質主義的人性觀，然而那只是顯示人類的特質和德性具有一定程度的可塑性、能被環境和脈絡所影響，卻無法證明一切的個人特質和德性都只是特定情境下的產物。相反地，更多的證據都告訴我們不應該天真地認為人類毫無天性、以為一切邪惡皆是後天使然，也不應該把道德簡化成特定條件下才允許的偶然行為、抹殺了個人追求並彰顯良善的主動性。
+上述例證雖然駁斥了本質主義的人性觀，然而那只是顯示人類的特質和德性具有一定程度的可塑性、能被環境和脈絡所影響，卻無法證明一切的個人特質和德性都只是特定情境下的產物。相反地，更多的證據都告訴我們**不應該天真地認為人類毫無天性、以為一切邪惡皆是後天使然，也不應該把道德簡化成特定條件下才允許的偶然行為、抹殺了個人追求並彰顯良善的主動性。**
 
 人性之初便挾帶了後天無法左右的許多習性，絕非白紙一張——這是有顯著證據支持的觀點[6]。正因為人性是演化而來的遠古產物、而非後現代思潮高唱的「一切都是社會建構」，所以在個人生活或道德問題上更實際的切入點，應該是積極地認識人性、謹慎考慮人性在不同趨力作用下的走向、一步步建立足以隱惡揚善的機制。我相當推薦Robert Greene的[《The Laws of Human Nature》](https://www.books.com.tw/products/0010868819)作為認識人性的教科書。
 
-同時，人類也具備了能進一步被形塑的彈性與潛力。因此當我們認識人性、深諳情境的壓力，便會瞭解到有意識地建立、設計、參與那些能使自己的德性更「靠得住」的情境，實是至關重要的。就跟情境主義提醒我們的一樣，與其相信自己可以在最艱難的時刻依然保持正直，我們更應該唯恐落入那些能輕易使自己棄善行惡的處境。情境主義者John Doris舉了這個生動的案例，確實值得我們玩味：
+同時，人類也具備了能進一步被形塑的彈性與潛力。因此當我們認識人性、深諳情境的壓力，便會瞭解到**有意識地建立、設計、參與那些能使自己的德性更「靠得住」的情境，實是至關重要的**。就跟情境主義提醒我們的一樣，與其相信自己可以在最艱難的時刻依然保持正直，我們更應該唯恐落入那些能輕易使自己棄善行惡的處境。情境主義者John Doris舉了這個生動的案例，確實值得我們玩味：
 
 > 試想像一位與你調情已久的同事，以你配偶出差使你暫時落單為名，約你共進晚餐，並備以佳餚美酒［……］你或會以為不用擔心——畢竟你是一個正直的人，半點葡萄酒毫不傷人；但若你謹記情境主義的教訓，你會堅決避開這頓晚餐［……］你不懷疑自己真的重視忠誠，但你懷疑自己按之而行的能力——尤當蠟燭點燃，酒精流動之際。你會認同，在這情境下依賴品格是錯誤的；要達致道德上理想的結果，須了解到情境的壓力往往壓倒品格，並從此避免險境。 [7]
 
 ---
 
-# 人的道德潛能
+## 人的道德潛能
 
-即使我們理解自己的德性並不總是可以被信任、多數人也都無法真正展現恆久一致的德性，那也不表示人類用於培養美德的努力是多餘或徒勞無功的，原因很簡單：德性倫理學並不需要主張所有人都擁有德性，相對地，我們有好理由相信德性應該被視為你我難以迄及、但值得奮鬥、且應當致力的理想。
+即使我們理解自己的德性並不總是可以被信任、多數人也都無法真正展現恆久一致的德性，那也不表示人類用於培養美德的努力是多餘或徒勞無功的，原因很簡單：德性倫理學並不需要主張所有人都擁有德性，相對地，我們有好理由相信**德性應該被視為你我難以迄及、但值得奮鬥、且應當致力的理想。**
 
 首先，讓我們討論德性作為一種「理想」的意思。
 
-援引儒家的論述，我們看到孔子說「聖人，吾不得而見之矣；得見君子者，斯可矣」、「善人，吾不得而見之矣；得見有恆者，斯可矣。」而就連孔子也不敢以聖人自居，說「若聖與仁，則吾豈敢？」足見所謂「聖與仁」，是我們終其一生必須努力不懈、幾無可能達標的人格理想。在這個理解下，德性其實是一個人朝著「所能夠成為的自己」持續前進的動態過程，而不是他能夠真正佔有、從此高枕無憂的奢華外衣。
+援引儒家的論述，我們看到孔子說「聖人，吾不得而見之矣；得見君子者，斯可矣」、「善人，吾不得而見之矣；得見有恆者，斯可矣。」而就連孔子也不敢以聖人自居，說「若聖與仁，則吾豈敢？」足見所謂「聖與仁」，是我們終其一生必須努力不懈、幾無可能達標的人格理想。在這個理解下，**德性其實是一個人朝著「所能夠成為的自己」持續前進的動態過程**，而不是他能夠真正佔有、從此高枕無憂的奢華外衣。
 
 那麼，人性中是否存在著向善的趨力呢？孟子對此就有極盡深入的討論，在這裡謹以著名的「孺子入井」一說為例：
 
@@ -87,11 +87,11 @@ tags: #個人生活 #時間偏好
 
 從反面切入，我們可以參考孟子的說法：「人之所以異於禽獸者，幾希，庶民去之，君子存之。」這是說人與禽獸之間的差異就這麼一點點——這一點點正是我們具備的道德之心。若我們背離了道德追求、放棄了道德潛能的實踐，我們就稱不上是人，而與禽獸無異了。對儒家而言，堅守這條人類自我形象的底線，是不證自明的公理。
 
-從正面思考，我會[重申](https://vocus.cc/@Emperors_Wolf/61c84c31fd89780001d5ec0e)這點：在我們企望著意義的生命中，不容忽視的是你我所秉持的理想、以及我們為達至理想所採取的行動。講白話點，如果你心中沒有一個值得前進的理想——理想的自我、或者身處在理想的人生風景中的自己（亦即另一種形式的理想自我）——並且為之付出像樣的努力，那麼要看見自己活著的意義，肯定會是個難題。
+從正面思考，我會[重申](盡責地善待自己)這點：**在我們企望著意義的生命中，不容忽視的是你我所秉持的理想、以及我們為達至理想所採取的行動**。講白話點，如果你心中沒有一個值得前進的理想——理想的自我、或者身處在理想的人生風景中的自己（亦即另一種形式的理想自我）——並且為之付出像樣的努力，那麼要看見自己活著的意義，肯定會是個難題。
 
-正因為你我生來都帶著這份道德潛能、而德性作為理想卻是幾乎不可能被迄及的，這個在「潛能」與「理想」間的遙遠距離，反而更凸顯了追求德性的崇高與深刻，以及人類在這條漫長路途上的無限可能。就跟長跑——[這個專屬人類的運動方式](https://www.natgeomedia.com/environment/article/content-1823.html)——一樣，人類從沒有達到一個特定里程而從此開心佇足不再前進，反倒鍥而不捨地探索更遠的距離、更艱困的路途、更看似不可能的目標，而長跑的意義也正是由此彰顯。同樣地，既然人人皆有道德的潛能與傾向，那麼在道德上的追求和實踐就必定是為你我生命帶來豐富意義的重要旅程，無論我們此生能否看見終點。
+正因為你我生來都帶著這份道德潛能、而德性作為理想卻是幾乎不可能被迄及的，這個**在「潛能」與「理想」間的遙遠距離，反而更凸顯了追求德性的崇高與深刻，以及人類在這條漫長路途上的無限可能**。就跟長跑——[這個專屬人類的運動方式](https://www.natgeomedia.com/environment/article/content-1823.html)——一樣，人類從沒有達到一個特定里程而從此開心佇足不再前進，反倒鍥而不捨地探索更遠的距離、更艱困的路途、更看似不可能的目標，而長跑的意義也正是由此彰顯。同樣地，既然人人皆有道德的潛能與傾向，那麼在道德上的追求和實踐就必定是為你我生命帶來豐富意義的重要旅程，無論我們此生能否看見終點。
 
-在我們拆解了人性和道德的各個面向、藉此建立一種務實但積極的人性觀後，下篇我將接著討論「有意識地建立及參與能使自身德性更可靠的情境」具體來說代表什麼，並論證為什麼這本身就是一個重要的德行。
+在我們拆解了人性和道德的各個面向、藉此建立一種務實但積極的人性觀後，下篇我將接著討論 **「有意識地建立及參與能使自身德性更可靠的情境」具體來說代表什麼，並論證為什麼這本身就是一個重要的德行。**
 
 ---
 
