--- a/content/「信仰」作為生命的基本態度.md
+++ b/content/「信仰」作為生命的基本態度.md
@@ -17,7 +17,7 @@ tags: #基督教 #生命 #社會
 
 於是，人類的理性被降格成了相對主義，資訊爆炸使人們屈服於任何形式的不確定性、或變相鼓勵他們買單任何容許自由心證的哲學，你我喪失的主動性和創造力則被物欲和消費力理所當然地取代。「真理」兩個字被染上了「壓迫或歧視其他可能性」的迷信色彩，使得許多人對於「相信任何形式的真理」感到抗拒、擔心這將抵觸他們引以為豪的多元開放觀點。
 
-現代人的懷疑態度，已遠離啟蒙時代那種充滿主動性的好奇心與創造力，變成了漠不關心的虛無主義、或者崇尚政治正確的相對主義，他們對工作、政治、道德感到困惑，但缺乏著力點的飄盪狀態卻被他們視為正常。人們不再以理性思考、溫情厚意、感官知覺去體會生命，相反地，他們機械化、漫無目標、汲汲營營地追逐著他們認為自己「應該有」的經驗，但結果往往是感到更強烈的困惑、虛無、甚至絕望。
+現代人的懷疑態度，已遠離啟蒙時代那種充滿主動性的好奇心與創造力，變成了[漠不關心的虛無主義、或者崇尚政治正確的相對主義，他們對工作、政治、道德感到困惑，但缺乏著力點的飄盪狀態卻被他們視為正常](人類不是地球的癌細胞)。人們不再以理性思考、溫情厚意、感官知覺去體會生命，相反地，他們機械化、漫無目標、汲汲營營地追逐著他們認為自己「應該有」的經驗，但結果往往是感到更強烈的困惑、虛無、甚至絕望。
 
 ---
 
