--- a/content/別低估你今天可以做對的事（上）.md
+++ b/content/別低估你今天可以做對的事（上）.md
@@ -93,6 +93,8 @@ tags: #個人生活 #時間偏好 #道德
 
 在我們拆解了人性和道德的各個面向、藉此建立一種務實但積極的人性觀後，下篇我將接著討論 **「有意識地建立及參與能使自身德性更可靠的情境」具體來說代表什麼，並論證為什麼這本身就是一個重要的德行。**
 
+[下篇](別低估你今天可以做對的事（下）.md)
+
 ---
 
 註
