--- a/content/別低估你今天可以做對的事（下）.md
+++ b/content/別低估你今天可以做對的事（下）.md
@@ -3,6 +3,9 @@ title: "別低估你今天可以做對的事（下）"
 draft: 
 tags: #個人生活 #時間偏好 #道德
 ---
+[上篇](別低估你今天可以做對的事（下）.md)
+
+---
 ## 道德的「利社會」本質
 
 多數人大概都認為道德是人類獨有的、源自某種崇高理性的產物，但其實許多研究指出各種哺乳動物身上都可以觀察到明顯的「利社會 (Prosocial)」行為，某種層面上這幾乎可以被視為道德最原始的型態。
