--- a/content/相愛不是結婚的充要條件.md
+++ b/content/相愛不是結婚的充要條件.md
@@ -1,7 +1,11 @@
 ---
 title: "相愛不是結婚的充要條件"
 draft: 
-tags: #婚姻 #愛情 #責任 #兩性
+tags: 
+- 婚姻
+- 愛情
+- 責任
+- 兩性
 ---
 過去一年，從準備好自己的心態、求婚、籌備婚禮、拍婚紗、正式登記，到現在要準備收尾，等三月的家宴辦完，就可以再來規劃一下婚後的出國旅行了。
 
