--- a/content/「價值階級」與社會的組成.md
+++ b/content/「價值階級」與社會的組成.md
@@ -1,7 +1,9 @@
 ---
 title: "「價值階級」與社會的組成"
 draft: 
-tags: #社會 #價值
+tags: 
+- 社會
+- 道德
 ---
 人是社會性的動物，人活著就不可能擺脫與其他人的交流互動，亦不可能對自己所處社群的重要性目盲。更多時候，我們與他人的關係才是形塑你我的自我認知、以及生命意義的來源。
 
