--- a/content/氣候運動家是對民主的一種侮辱.md
+++ b/content/氣候運動家是對民主的一種侮辱.md
@@ -1,7 +1,10 @@
 ---
 title: "氣候運動家是對民主的一種侮辱"
 draft: 
-tags: #能源 #政治 #社會
+tags: 
+- 能源
+- 政治
+- 社會
 ---
 本文編譯自[How Greta serves the elites - Climate activists are an insult to democracy](https://unherd.com/2021/11/how-greta-serves-the-elites/)。
 
