--- a/content/生命權（反墮胎）最強而有力的論點.md
+++ b/content/生命權（反墮胎）最強而有力的論點.md
@@ -1,7 +1,11 @@
 ---
 title: "生命權（反墮胎）最強而有力的論點"
 draft: 
-tags: #墮胎 #社會 #生命 #道德
+tags: 
+- 墮胎
+- 社會
+- 生命
+- 道德
 ---
 **我在墮胎議題上並沒有既定立場；我沒有百分之百的信心說我支持或反對墮胎。**
 
