--- a/content/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md
+++ b/content/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md
@@ -1,7 +1,10 @@
 ---
 title: "英國王室凸顯了「獨立於政治外的國家象徵」之重要性"
 draft: 
-tags: #政治 #國家 #典範
+tags: 
+- 政治
+- 國家
+- 典範
 ---
 我們都知道現今世界上的共和政體，大多以行政、立法、司法的三權分立作為支柱，並賦予地方分治的權力以制衡中央。在原則上，這可以避免任何國家事務走向專制。
 
