--- a/content/「神聖個人」作為人類世界的基石.md
+++ b/content/「神聖個人」作為人類世界的基石.md
@@ -102,7 +102,7 @@ tags:
 
 現代人雖然經常不樂意透過宗教或傳統的觀點去承認個人神聖性，但他們幾乎不可能不經由其他途徑去為自己的生命加諸意義、注入某種「絕對」的價值，所以很多人才會秉持著像是「問心無愧地活著」、「追求熱情」、「創造自己的人生意義」的信條在生活，或是為了安頓內心「意義真空」的焦慮、努力說服自己「我已經夠好了」。
 
-換句話說，幾乎所有看似不相信個人神聖性的人，其實都用預設了個人神聖性的方式活著、努力將自己視為一個重要且積極的存在，他們只不過是特別排斥[太文言或傳統的措辭罷了](「樂觀虛無主義」的謬誤)。但也因為缺乏對個人神聖性的深刻思索，他們難免會偶爾忘了這件事，進而疏於照顧和鞭策自己。
+換句話說，幾乎所有看似不相信個人神聖性的人，其實都用預設了個人神聖性的方式活著、努力將自己視為一個重要且積極的存在，他們只不過是特別排斥[太文言或傳統的措辭罷了](「樂觀虛無主義」的謬誤.md)。但也因為缺乏對個人神聖性的深刻思索，他們難免會偶爾忘了這件事，進而疏於照顧和鞭策自己。
 
 至於真正相信個人毫無神聖性的人，[他們對此信念的實踐值得我們恐懼](https://zh.wikipedia.org/zh-tw/%E7%BA%A6%E5%87%AF%E6%8B%89%E6%A0%A1%E5%9B%AD%E6%9E%AA%E5%87%BB%E4%BA%8B%E4%BB%B6)，而那已經不是我們可以輕易拆解的問題。
 
