--- a/content/別低估你今天可以做對的事.md
+++ b/content/別低估你今天可以做對的事.md
@@ -1,13 +1,10 @@
 ---
-title: "別低估你今天可以做對的事（下）"
+title: "別低估你今天可以做對的事"
 draft: 
 tags: 
 - 個人生活
 - 時間偏好
 - 道德
----
-[上篇](別低估你今天可以做對的事（下）.md)
-
 ---
 ## 道德的「利社會」本質
 
