--- a/content/為受難者祈禱的真正意義.md
+++ b/content/為受難者祈禱的真正意義.md
@@ -15,7 +15,7 @@ tags:
 
 為受難者祈禱，當然，也不是要稟告上天發生了什麼事。上天作為定義上的「上天」，本就該知道世間發生了什麼事、對人們造成了什麼影響，不需要人類湊在一塊七嘴八舌地向祂報告、也不需要任何人雞婆地補充任何祂可能錯過或無法理解的細節。
 
-我相信，**為受難者祈禱的真正意義，是在苦難跟前、謙卑沉痛地省思每個人自己肩膀上的[道德重任](人類不是地球的癌細胞)。**
+我相信，**為受難者祈禱的真正意義，是在苦難跟前、謙卑沉痛地省思每個人自己肩膀上的[道德重任](當代的價值真空與道德責任.md)。**
 
 當我們為特定事件中的受難者祈禱，我們是有意識地挪出自己生命的一段時間，慎重、肅穆地將自己的意識貫注於這個事件上（所謂"pay attention"）。
 
