--- a/content/積極且審慎地參與社會.md
+++ b/content/積極且審慎地參與社會.md
@@ -33,7 +33,7 @@ tags:
 
 正直誠實的言行，意味著在漫長人生中的每一段關係、每一項職責、每一次與他人的交際應對，都盡力去思考自身言行對長遠未來的影響、有意識地維繫你所處社群的信任感，並致力去強化、或至少試著去團結你和他人之間的共同價值。**我們知道自己應該做的，就要身體力行去行動；我們嘴裡說出來的，應該要有所省思與節制，只講我們有審慎思考、真正相信的話。**
 
-生命中每一次跟他人的交流假如都是一場比賽，結果可能有輸有贏、有進退有言和，那麼無論我們會不會再見到對方、他人會不會發現，都應該秉持公正、自重的態度，尊敬對手、比賽、和規則，以[運動家精神](別低估你今天可以做對的事（下）)去參與整個過程，而非不計手段去贏得勝利、甚至不惜欺詐取巧。
+生命中每一次跟他人的交流假如都是一場比賽，結果可能有輸有贏、有進退有言和，那麼無論我們會不會再見到對方、他人會不會發現，都應該秉持公正、自重的態度，尊敬對手、比賽、和規則，以[運動家精神](別低估你今天可以做對的事.md)去參與整個過程，而非不計手段去贏得勝利、甚至不惜欺詐取巧。
 
 行為是相對容易被檢視的，但言詞往往卻是法律難以管轄的範圍，得靠著更具體的價值典範、或者該說道德觀整體，去有效地約束和提升，而我們千萬不可輕忽言詞的重要、應該慎重對待。
 
