--- a/content/道德的情境與潛能.md
+++ b/content/道德的情境與潛能.md
@@ -1,8 +1,7 @@
 ---
-title: "別低估你今天可以做對的事（上）"
+title: "道德的情境與潛能"
 draft: 
 tags: 
-- 個人生活
 - 時間偏好
 - 道德
 ---
@@ -93,10 +92,6 @@ tags:
 從正面思考，我會[重申](盡責地善待自己)這點：**在我們企望著意義的生命中，不容忽視的是你我所秉持的理想、以及我們為達至理想所採取的行動**。講白話點，如果你心中沒有一個值得前進的理想——理想的自我、或者身處在理想的人生風景中的自己（亦即另一種形式的理想自我）——並且為之付出像樣的努力，那麼要看見自己活著的意義，肯定會是個難題。
 
 正因為你我生來都帶著這份道德潛能、而德性作為理想卻是幾乎不可能被迄及的，這個**在「潛能」與「理想」間的遙遠距離，反而更凸顯了追求德性的崇高與深刻，以及人類在這條漫長路途上的無限可能**。就跟長跑——[這個專屬人類的運動方式](https://www.natgeomedia.com/environment/article/content-1823.html)——一樣，人類從沒有達到一個特定里程而從此開心佇足不再前進，反倒鍥而不捨地探索更遠的距離、更艱困的路途、更看似不可能的目標，而長跑的意義也正是由此彰顯。同樣地，既然人人皆有道德的潛能與傾向，那麼在道德上的追求和實踐就必定是為你我生命帶來豐富意義的重要旅程，無論我們此生能否看見終點。
-
-在我們拆解了人性和道德的各個面向、藉此建立一種務實但積極的人性觀後，下篇我將接著討論 **「有意識地建立及參與能使自身德性更可靠的情境」具體來說代表什麼，並論證為什麼這本身就是一個重要的德行。**
-
-[下篇](別低估你今天可以做對的事（下）.md)
 
 ---
 
