--- a/content/秩序是靈魂的第一需要.md
+++ b/content/秩序是靈魂的第一需要.md
@@ -36,7 +36,7 @@ tags:
 
 ## 道德是社會秩序的基石
 
-雖然余杰的論述是針對以基督教建國的美國社會，但是同理亦適用於其他社會：**個人品格和公共德性必是社會秩序的基石**——我們必須能為了他人、為了群體、為了未來（亦即[另一種形式的群體](別低估你今天可以做對的事（下）)）去限縮自身、接受制約，才可能玩得起自由、民主、法治、乃至於商業、金融的遊戲。
+雖然余杰的論述是針對以基督教建國的美國社會，但是同理亦適用於其他社會：**個人品格和公共德性必是社會秩序的基石**——我們必須能為了他人、為了群體、為了未來（亦即[另一種形式的群體](別低估你今天可以做對的事.md)）去限縮自身、接受制約，才可能玩得起自由、民主、法治、乃至於商業、金融的遊戲。
 
 知名社會科學家法蘭西斯．福山就在《**信任：社會德性與繁榮的創造**》中提出：一個社會的「**自發社交性**」強健與否，決定了人們是否能信任親族之外的人、順暢進行大規模合作、創造更具規模的經濟組織。福山認為，「信任」這個社會資本是難以透過政策去建立的，只可能從本身的文化土壤中、以普遍道德的形式生長出來。雖然文化與道德絕非經濟活動的首要決定因素，但也絕對是各種社會活動底下的根本結構，根本性地影響著人與人之間的互動方式——福山的觀點與柯克殊途同歸。
 
