--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -49,7 +49,7 @@ tags:
 
 個人與其理想間的關係，解釋了宗教信仰被遺忘的深刻意涵：宗教崇拜，是人類數千年來對於某種大家共同相信的「理想存有」（理想的價值或理想的人類原型）的傳頌；宗教的教義，則是信徒用來自我修正、以微薄之力去體現和致敬這個「理想存有」的依歸，亦可視為歷代人類以生命經驗去累積出的、通往理想生命的地圖。
 
-雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信[虛無主義](「樂觀虛無主義」的謬誤.md)或[無神論](「信仰」作為生命的基本態度)，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
+雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信[虛無主義](「樂觀虛無主義」與生命意義.md)或[無神論](「信仰」作為生命的基本態度)，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
 
 然而，抗拒對生命理想的思考並不會使你的良知噤聲，假裝自己「已經夠好了」也不會真正讓你安然自得，因為我們無法擺脫對生命意義的需要，而生命意義必然會在你邁向理想的實踐中產生。齊克果所謂的「真正的人生是『宗教性』的人生」，我想與此無異。
 
