--- a/content/道德的情境與潛能.md
+++ b/content/道德的情境與潛能.md
@@ -7,7 +7,7 @@ tags:
 ---
 人應該如何生活？
 
-假如我們能同意每個人都是[存在著絕對價值的個體](「神聖個人」作為人類世界的基石)、每個人都[追尋著一份生命的意義](「樂觀虛無主義」的謬誤.md)、每個人都[背負著善待自己的責任](盡責地善待自己)，那麼「如何生活」會是我們下一個應該提出的問題。即使我們完全不花一丁點時間去考慮這個問題，也仍然是任由某種已經習慣奉行的模式宰制自己每一天的時間。可想而知，我們選擇如何生活絕非是微不足道的小事。
+假如我們能同意每個人都是[存在著絕對價值的個體](「神聖個人」作為人類世界的基石)、每個人都[追尋著一份生命的意義](「樂觀虛無主義」與生命意義.md)、每個人都[背負著善待自己的責任](盡責地善待自己)，那麼「如何生活」會是我們下一個應該提出的問題。即使我們完全不花一丁點時間去考慮這個問題，也仍然是任由某種已經習慣奉行的模式宰制自己每一天的時間。可想而知，我們選擇如何生活絕非是微不足道的小事。
 
 ---
 
