--- a/content/積極且審慎地參與社會.md
+++ b/content/積極且審慎地參與社會.md
@@ -9,7 +9,7 @@ tags:
 ---
 ## 立志於你能設想的最崇高目標
 
-在我們生活中的每一刻，都存在著一系列截然不同的可能性等待我們將之化為現實：你可以選擇有酒今醉或未雨綢繆、可以選擇擁護私利或奉獻他人、可以選擇安逸怠惰或積極進取。而你抉擇的每一個行動，都會將一系列的可能性收斂於一個無法逆轉的現實。這些抉擇累積成為我們每一個人肩上背負的因與果，確實地影響著你我的每一刻當下、以及自己與周遭他人的未來。
+[在我們生活中的每一刻，都存在著一系列截然不同的可能性等待我們將之化為現實](別低估你今天可以做對的事)：你可以選擇有酒今醉或未雨綢繆、可以選擇擁護私利或奉獻他人、可以選擇安逸怠惰或積極進取。而你抉擇的每一個行動，都會將一系列的可能性收斂於一個無法逆轉的現實。這些抉擇累積成為我們每一個人肩上背負的因與果，確實地影響著你我的每一刻當下、以及自己與周遭他人的未來。
 
 而我們是否能立志於每一個當下得以設想到的最崇高目標呢？之所以用「崇高」這個字，是因為我想要提醒我們從道德的立足點去眺望這個目標。相較於一個單純在高度上很「高」、幅員上很「大」、數據上很「優異」的目標，「崇高」這個字迫使我們跳脫效益的算計、納入他人的視角、尋求自己的良心、探問何謂「應然(Ought to)」，並依內心的答案去行動。
 
@@ -57,11 +57,11 @@ tags:
 
 說到這裡，肯定有人會問「為什麼我需要這麼做？為什麼要活得這麼累？」
 
-我的回答是，假如你我的生命確實僅有此世，假如不管向左向右你都會替自己找一種更好更值得的方式活下去、而且也已經在這麼做，假如我們終其一生仍需要追尋那份活著的意義、無論是什麼能夠讓我們覺得自己沒有白來一遭，那麼為什麼不選擇將這個策略貫徹到底呢？
+我的回答是，假如你我的生命確實僅有此世，假如不管向左向右你都會替自己找一種更好更值得的方式活下去、而且也已經在這麼做，假如我們終其一生仍需要追尋那份[活著的意義](「樂觀虛無主義」與生命意義)、無論是什麼能夠讓我們覺得自己沒有白來一遭，那麼為什麼不選擇將這個策略貫徹到底呢？
 
 設定崇高目標並為之努力，並不是要你樂意成為他人的奴役、勇於自我犧牲的傻子，這只是更具體地彰顯了你我內心都已經存在的那份向善的力量、以及對意義的追求；這只是用更清晰篤定的口吻去詮釋我們已經在日常生活中為自己的生活、家人的幸福、工作的突破、社會的參與所做的所有努力——這就是許多人一直在做的，只不過我們經常沒有思考透徹、搞清楚背後的原因與意義，所以就有可能目光短淺、失焦於眼前景況、做出對長遠未來無益的決定。
 
-要了解，作為一個神聖的個人，你就是文明的基石、是社會價值的主動倡議者（經由你的一言一行）、是決定這個世界會倒向天堂或地獄的關鍵力量。**你無法忽視這個事實，因為很大程度上你就已經用這個「把自己看得夠重要」的姿態在生活，也總是期待周遭他人是用這個方式看待你**——唯有將彼此看作是擁有自由意志、能夠主動作為、有創造與影響力的個人，我們才能對他人有合理的請求與溝通，而非將彼此去人性化、降格成特定族群或意識形態的傳聲筒、抑或當成值得利用的工具。講白話一點，這就是真正將彼此「當人看」，而這點總是得從你我自己開始做起。
+要了解，作為一個神聖的個人，你就是文明的基石、是社會價值的主動倡議者（經由你的一言一行）、是決定這個世界會倒向天堂或地獄的關鍵力量。**你無法忽視這個事實，因為很大程度上你就已經用這個「[把自己看得夠重要](「神聖個人」作為人類世界的基石)」的姿態在生活，也總是期待周遭他人是用這個方式看待你**——唯有將彼此看作是擁有自由意志、能夠主動作為、有創造與影響力的個人，我們才能對他人有合理的請求與溝通，而非將彼此去人性化、降格成特定族群或意識形態的傳聲筒、抑或當成值得利用的工具。講白話一點，這就是真正將彼此「當人看」，而這點總是得從你我自己開始做起。
 
 要成為有自尊、也受他人尊敬的個人，光是活在舒適圈裡、滿足於享樂是顯然不夠的。你、我、和絕大部分的人，內心都大概深知自己哪裡做得還不夠、知道自己還有許多該做但沒做到的、體認自己其實有許多未實踐的潛能，無論這是在個人生活的改善、家庭關係的培養、工作技能的提升、感情世界的心態等。在這些自認不足、但可以做得更好的面向上付出努力，才是真正能讓我們對自己產生尊敬、真正成為我們「所能夠成為的人」的途徑，而不是怠惰沉溺、假裝看不見自己明明知道該做的事情。
 
