--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -86,7 +86,7 @@ tags:
 
 每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：**決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難**。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
 
-我們每一個人在每一刻都承擔著這個責任、都面臨著這個抉擇，我們或許無法對社會的整體福祉有直接的貢獻，但我們能決定性地影響我們周遭人們的安康，而每一個小圈圈的安康，最終會累積成整個社會的安康。
+我們每一個人在每一刻都承擔著[這個責任](當代的價值真空與道德責任)、都面臨著這個抉擇，我們或許無法對社會的整體福祉有直接的貢獻，但我們能決定性地影響我們周遭人們的安康，而每一個小圈圈的安康，最終會累積成整個社會的安康。
 
 今天當一個人將自己的生活打理好、或一通電話跟父母報告自己最近工作的順利時，就足以在他所能直接影響的圈圈裡創造更多的鼓舞和動力，在乎他的人便可能因此少一分擔憂、空出多一分心力去照顧其周遭亦需要被照顧的人。相對地，如果一個人任由生活頹廢、對一事無成的自己不加以鞭策，他的怠惰委靡只會感染和拖累身邊的人，也讓在乎他的人因此擔心憂慮，這麼做等於是將所有他能接觸到的人們一起拖向更糟糕的境地。
 
