--- a/content/「價值階級」之於個人和社會.md
+++ b/content/「價值階級」之於個人和社會.md
@@ -1,5 +1,5 @@
 ---
-title: "「價值階級」與社會的組成"
+title: "「價值階級」之於個人和社會"
 draft: 
 tags: 
 - 社會
@@ -25,7 +25,7 @@ tags:
 
 從實務的角度看，一個人的價值階級是否明確、是否清楚不同事物在他心目中的輕重緩急，也會直接影響他對生活的規劃、他投注時間的活動、他重視的人際關係。又或許我們該反過來看：**你我在生活中的每一刻，其實都用行動體現著自己心中的價值階級**，而那未必會跟我們自以為相信、掛在嘴上講給別人聽的價值如出一徹。因此要判斷一個人真正相信、真正放在優先順位的事情，最好的方式是觀察他的行動而非說詞；我們也該反求諸己，從自身的行動去檢視自己究竟是言行一致、抑或時常在自欺欺人。
 
-人類作為「目的性的存在」，我們不可能[假裝所有事情都不重要](「樂觀虛無主義」與生命意義.md)、抑或都一樣重要，我們永遠都必須區分哪些事物比其他事物更重要，否則就會在利益衝突時落入進退兩難的處境。與動物不同的是，決定一件事情重要與否的，並非單單只是我們的生物本能，更是我們如何區分眼前一切事物的優先次序，而這個建立在「價值」之上的優先次序，就是個紮紮實實的道德問題。
+人類作為「目的性的存在」，我們不可能假裝所有事情都不重要、抑或都一樣重要，我們永遠都必須區分哪些事物比其他事物更重要，否則就會在利益衝突時落入進退兩難的處境。與動物不同的是，決定一件事情重要與否的，並非單單只是我們的生物本能，更是我們如何區分眼前一切事物的優先次序，而這個建立在「價值」之上的優先次序，就是個紮紮實實的道德問題。
 
 換句話說，**一個人選擇參與這個世界的方式——就算他不相信道德、不認為生命有意義——在最根本的定義上就是個道德命題。無論你選擇怎麼活，那都是個道德性的價值選擇。**
 
