--- a/content/「樂觀虛無主義」與生命意義.md
+++ b/content/「樂觀虛無主義」與生命意義.md
@@ -109,7 +109,7 @@ tags:
 
 ---
 
-## 後記
+## 生命意義的必須
 
 雖然文章裡我僅簡短帶到兩次尼采的名字，但尼采對當代虛無主義觀點的影響絕對是舉足輕重，更是許多不滿現實、喜好顛覆色彩的年輕人用來搭配唯物論和自然主義服用的良方。加上Richard Dawkins領軍的新無神論運動的推波助瀾，現代人對真理、意義、典範、及其伴隨而來的責任的否定和抗拒，可說是理所當然、理直氣壯——十年前，我個人「理性啟蒙」的起點也無異於此。
 
