--- a/content/別低估你今天可以做對的事.md
+++ b/content/別低估你今天可以做對的事.md
@@ -3,7 +3,7 @@ title: "別低估你今天可以做對的事"
 draft: 
 tags: 
 - 個人生活
-- 時間偏好
+- 時間偏好****
 - 道德
 ---
 ## 道德的「利社會」本質
@@ -44,7 +44,7 @@ tags:
 
 ## 由你所組成的社群
 
-扯了一大圈動物行為和文明史事，這些究竟跟你該怎麼生活有何干係？答案很簡單：**你，以及明天的你、後天的你、未來每一刻的你，其實就是個由你自己所組成的社群**。
+扯了一大圈動物行為和文明史事，這些究竟跟你該怎麼生活有何干係？答案很簡單：**[你，以及明天的你、後天的你、未來每一刻的你，其實就是個由你自己所組成的社群](道德，是群體的跨期福祉問題)**。
 
 或許你覺得把「未來的自己」當成是跟「現在的自己」不一樣的人有點奇怪，不過那恐怕是因為你沒有發現我們多半已經用這種方式看待自己——當你明明該把作業寫完但又多滑了半小時臉書、在這個月營業會議的報告上偷工減料打迷糊帳、或者本來要去運動卻又嗑掉了一包餅乾然後跟自己改約明天，你都清楚表達了你如何把「未來的自己」當成是個你這輩子八竿子打不著的人。但當然，「未來的你」與你的關連可深了。
 
@@ -64,7 +64,7 @@ tags:
 
 ## 正確行為的積累
 
-基於此前的論述，我們已經釐清了一個清晰且值得投身的方向，但這還只是第一步。接下來，我們該思考「有意識地建立或參與能讓自身德性更可靠的情境」具體而言代表什麼。
+基於此前的論述，我們已經釐清了一個清晰且值得投身的方向，但這還只是第一步。接下來，我們該思考「[有意識地建立或參與能讓自身德性更可靠的情境](道德的情境與潛能)」具體而言代表什麼。
 
 討論意志力的書籍經常建議我們要為自己打造一個容易養成良好習慣、能以最小阻力完成正確行動的環境：如果你想要瘦身，就把垃圾食物通通丟掉；如果你想戒掉手機成癮，就該買個Kitchen Safe當成你的「慾望控制箱」；如果你想要一大早就出門運動，或許可以考慮直接穿著運動套裝上床睡覺……諸如此類。
 
@@ -88,7 +88,7 @@ tags:
 
 你會發現，在每一天的日常生活裡，你能做對的事情其實有太多太多，而今天的你只需要挑一件做到就夠了，你更可能發現，你根本有能力做到不止一件。當你今天為了自己或你愛的人完成一件你相信是正確的事，你會踏實感覺到你比昨天的自己又成長了一點點、萌生了多一分對自己的尊敬，這也是你努力使未來的自己更加可靠的重要一小步。
 
-[每一個人每一天醒來都可以選擇要為這世界帶來更多的安康、抑或更多不必要的苦難](盡責地善待自己)，因此，我們沒有理由放任自我成為對自己、對他人來說都更不可靠、不值得信任、甚至帶來更多麻煩的人——有意識地建立或參與能讓自身德性更可靠的情境，實是個你我都背負的道德責任。
+每一個人每一天醒來都可以選擇要為這世界帶來更多的安康、抑或更多不必要的苦難，因此，我們沒有理由放任自我成為對自己、對他人來說都更不可靠、不值得信任、甚至帶來更多麻煩的人——有意識地建立或參與能讓自身德性更可靠的情境，實是個你我都背負的道德責任。
 
 **一個人用來壯大自身的努力，應該朝著讓自己更具行善為仁的能力為目標，才可能在倉促人生中捉住那稍縱即逝的存在意義。而這些正確行為的積累，無論是否可能替我們免除生命中的苦難，它本身就是為將來的種種困境做好準備的唯一方式。**
 
