--- a/content/獨立於政治外的國家象徵.md
+++ b/content/獨立於政治外的國家象徵.md
@@ -32,4 +32,4 @@ tags:
 
 據我所知，英國並沒有發生上述的現象，就是因為英國首相並沒有跟國家的象徵掛勾，所以人們對強森的好惡根本不會反映在國旗或其他英國相關的國家代表物之上。如果你是個痛恨強森的英國選民，你或許會想要焚燒他的畫像，但大概不會想到要燒英國國旗，因為英國國旗（在過去）代表的是女王，不是強森；就算強森想要，他也無法佔據這個代表英國的象徵地位。
 
-**無論國家、宗教、或是其他企圖讓人類進行大規模合作的組織，都會需要某種凝聚眾人的理想，以及體現這種理想的典範**。只消對人性有基本的認識，就會知道我們不可能期待人們（包含我們自己）基於純粹的理性、同理心、自利、或意識形態去建立信任、相互合作。**[某種超越理性的理想必須作為眾人的標的](「價值階級」與社會的組成)**，引領人們朝同一個方向前進；若將理想與典範斥為迂腐迷信，實是[對人類社會的過度簡化、俗世化、及唯物主義化](當代的價值真空與道德責任.md)。
+**無論國家、宗教、或是其他企圖讓人類進行大規模合作的組織，都會需要某種凝聚眾人的理想，以及體現這種理想的典範**。只消對人性有基本的認識，就會知道我們不可能期待人們（包含我們自己）基於純粹的理性、同理心、自利、或意識形態去建立信任、相互合作。**[某種超越理性的理想必須作為眾人的標的](「價值階級」之於個人和社會.md)**，引領人們朝同一個方向前進；若將理想與典範斥為迂腐迷信，實是[對人類社會的過度簡化、俗世化、及唯物主義化](當代的價值真空與道德責任.md)。
