--- a/content/當代的價值真空與道德責任.md
+++ b/content/當代的價值真空與道德責任.md
@@ -35,13 +35,13 @@ tags:
 
 同時，許多深受自由派文化洗禮的人，一邊開放包容地宣揚人沒有「應該」要有的樣子、每個人都可以選擇成為他想要成為的人，一邊又矛盾地認定這種包容多元是人們「應該」具備的當代美德。他們相信可以**創造自己人生的價值、為自己本來的樣子感到驕傲、不需要等其他人的批准和認可**，卻依然擔心他們「創造自己的價值」的方式有沒有被別人看見和欣賞、也希望他們在社群媒體上分享的「驕傲地做你自己」這種又酷又性格的訊息能夠獲得他人的關注。
 
-他們會說自己基於開放包容的價值，相信人沒有一定要怎麼言行處世才比較好、認為那些對道德理想的堅持大多是無謂的堅持和對個人自由的迫害。只要配上不婚不生的「前衛新觀念」，這個無敵組合就可以保護他們畸形的道德相對主義永遠不被現實世界中、家裡牙牙學語的那個小怪物打臉。畢竟，**[道德相對主義，是個在知識上捍衛起來很方便、在現實中要實踐卻幾無可能的東西](「價值階級」與社會的組成)**——尤其當你小孩一股腦地做些企圖惹毛你的事的時候。
+他們會說自己基於開放包容的價值，相信人沒有一定要怎麼言行處世才比較好、認為那些對道德理想的堅持大多是無謂的堅持和對個人自由的迫害。只要配上不婚不生的「前衛新觀念」，這個無敵組合就可以保護他們畸形的道德相對主義永遠不被現實世界中、家裡牙牙學語的那個小怪物打臉。畢竟，**[道德相對主義，是個在知識上捍衛起來很方便、在現實中要實踐卻幾無可能的東西](「價值階級」之於個人和社會.md)**——尤其當你小孩一股腦地做些企圖惹毛你的事的時候。
 
 極端一點的例子是，甚至有人基於這種**矛盾地充滿了道德自信的道德相對主義**，能隨性地、帶著知識傲慢地宣稱：活在北韓集權統治下的無知人民或許其實很快樂；基督教堅持的一神論都只是教徒們一廂情願的唯心論；用共產主義取代萬惡的資本主義搞不好也不錯，只要我們放下成見、以及對既定道德理想的「執念」——絲毫未覺能允許他們講出這番打高空言論的，正是資本主義帶給他們的菁英教育和舒適生活。
 
 畢竟，既然一切對錯都只是詮釋的角度問題，這種搬弄是非的巧言淫辭也自然是信手拈來了。
 
-總結而言，**現代人經常毫無自覺地將世界觀建立在唯物論和虛無主義的雜交基礎上，有意或無意地承認了「人類是地球的癌細胞」、「一切社會都是建立在階級權鬥之上」、「沒有真理、只有解釋」這些近代知名的反人類、反秩序、及反道德的觀點。**
+總結而言，**現代人經常毫無自覺地將世界觀建立在唯物論和[虛無主義](「樂觀虛無主義」與生命意義)的雜交基礎上，有意或無意地承認了「人類是地球的癌細胞」、「一切社會都是建立在階級權鬥之上」、「沒有真理、只有解釋」這些近代知名的反人類、反秩序、及反道德的觀點。**
 
 當我們相信人類是地球的癌細胞，那麼要我們努力減少自己對環境的衝擊、要求政治高層們不顧其他人的當前安康去為未來採取行動、甚至相信自己不應該傳宗接代才算為減緩暖化盡一份力，這些想法便一點都不奇怪。當我們相信社會是階級鬥爭的戰場、人與人的互動是建立在權力遊戲之上，那麼輕易地視他人為自私愚蠢、視社會慣習為牢籠腳鐐、視文明秩序為過往暴力的累積，這些觀點也就似乎說得過去。
 
@@ -55,9 +55,9 @@ tags:
 
 那個基礎是：**每個人肩上都背負著神聖不可取代的道德重任。**
 
-**[道德，就是關於「應然」的知識、是個人所信仰的「絕對」價值、是指引生命的準則和理想。](「信仰」作為生命的基本態度)**
+**道德，就是關於「應然」的知識、是個人所信仰的「絕對」價值、是指引生命的準則和理想。**
 
-人要能生活，就必須對言行事物有一套區分緩急的[優先次序](「價值階級」與社會的組成)。 如果你的次序與他人的次序無法對齊，便會產生衝突、嫌隙、焦慮、自我懷疑；當你的次序與他人的次序相似或一致，便能夠為他人創造價值、為自己創造意義，並在混沌中建立秩序。人類是社會的動物、總是尋求與他人的連結，故根本不存在所謂的「不被任何人理解也沒關係」的生命意義——那應該要叫生命意義的失落。
+人要能生活，就必須對言行事物有一套區分緩急的優先次序。 如果你的次序與他人的次序無法對齊，便會產生衝突、嫌隙、焦慮、自我懷疑；當你的次序與他人的次序相似或一致，便能夠為他人創造價值、為自己創造意義，並在混沌中建立秩序。人類是社會的動物、總是尋求與他人的連結，故根本不存在所謂的「不被任何人理解也沒關係」的生命意義——那應該要叫生命意義的失落。
 
 所以，**承認道德的重要，就是承認人需要一套可以倚賴的言行準則，就是承認[秩序之於生命意義的必要性](秩序是靈魂的第一需要)，更是承認存在著某種值得人努力達到、而且每個人都有能力一步步靠近的生命理想。**
 
@@ -83,7 +83,7 @@ tags:
 
 然而，假如「好」或「善」（Good）是這麼容易定義的東西，這世界老早就不需要哲學家了。若我們只因為人類歷史上存在著許多「以善之名」的暴行，就寧願相信一切只是詮釋、沒有對錯可言，那顯然就忽視了人類集體為取得「關於『善』的共識」的努力，以及這份努力如何凝聚群體、為我們創造更幸福有意義的生活。
 
-當你能夠謙卑地、日復一日地努力省思並修正自己的言行，你必將看見自己龐大的道德潛能，甚至在某些時刻逼近自己理想中的自我。當你每天努力彌補自己的道德缺陷、[盡力為身邊他人帶來更多的安康（或至少不要帶來不必要的苦難）](盡責地善待自己)，你就不可能認為人類是這個星球上的寄生蟲、將社會問題一股腦地歸咎於權力結構、認為唯有政府有所作為才能讓事情變得更好。
+當你能夠謙卑地、日復一日地努力省思並修正自己的言行，你必將看見自己龐大的道德潛能，甚至在某些時刻逼近自己理想中的自我。當你每天努力彌補自己的道德缺陷、盡力為身邊他人帶來更多的安康（或至少不要帶來不必要的苦難），你就不可能認為人類是這個星球上的寄生蟲、將社會問題一股腦地歸咎於權力結構、認為唯有政府有所作為才能讓事情變得更好。
 
 相反地，你會發現只要秉持品格，即便過著極其平凡的生活也能深具意義。你更將相信人類確實有潛力成為真正善良、同理、勇敢、有智慧的物種。你會承擔起讓世界變得更好的責任，並透過為你周遭的人們成為最好的自己，來盡一份力。
 
