--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -49,7 +49,7 @@ tags:
 
 個人與其理想間的關係，解釋了宗教信仰被遺忘的深刻意涵：宗教崇拜，是人類數千年來對於某種大家共同相信的「理想存有」（理想的價值或理想的人類原型）的傳頌；宗教的教義，則是信徒用來自我修正、以微薄之力去體現和致敬這個「理想存有」的依歸，亦可視為歷代人類以生命經驗去累積出的、通往理想生命的地圖。
 
-雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信[虛無主義](「樂觀虛無主義」與生命意義.md)或[無神論](「信仰」作為生命的基本態度)，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
+雖然現代人習慣將宗教傳統斥為迷信，但拋棄了生命地圖的結果，卻是二十一世紀人類所面臨的深刻孤獨和焦慮。這也顯示了，世俗的現代人在更深的意義上並不是真正地相信虛無主義或無神論，比較常只是拒絕具體地思考什麼值得作為「理想」、自己又該為達至「理想」做出哪些犧牲和改變。
 
 然而，抗拒對生命理想的思考並不會使你的良知噤聲，假裝自己「已經夠好了」也不會真正讓你安然自得，因為我們無法擺脫對生命意義的需要，而生命意義必然會在你邁向理想的實踐中產生。齊克果所謂的「真正的人生是『宗教性』的人生」，我想與此無異。
 
@@ -86,7 +86,7 @@ tags:
 
 每一個人的周遭都有個他可以直接影響的圈圈，這個圈圈裡包含了他的家人、朋友、同事、以及任何他能接觸到的人。一個人在每一天醒來時，他都可以做一個決定：**決定他今天是否要為這個圈圈裡的安康負起責任，或是要在他觸手可及的範圍製造更多不必要的苦難**。這關乎他今天是否敬業地面對工作、是否友善地對待朋友、是否溫柔地關懷家人，或者做出完全相反的事。
 
-我們每一個人在每一刻都承擔著[這個責任](當代的價值真空與道德責任)、都面臨著這個抉擇，我們或許無法對社會的整體福祉有直接的貢獻，但我們能決定性地影響我們周遭人們的安康，而每一個小圈圈的安康，最終會累積成整個社會的安康。
+我們每一個人在每一刻都承擔著這個責任、都面臨著這個抉擇，我們或許無法對社會的整體福祉有直接的貢獻，但我們能決定性地影響我們周遭人們的安康，而每一個小圈圈的安康，最終會累積成整個社會的安康。
 
 今天當一個人將自己的生活打理好、或一通電話跟父母報告自己最近工作的順利時，就足以在他所能直接影響的圈圈裡創造更多的鼓舞和動力，在乎他的人便可能因此少一分擔憂、空出多一分心力去照顧其周遭亦需要被照顧的人。相對地，如果一個人任由生活頹廢、對一事無成的自己不加以鞭策，他的怠惰委靡只會感染和拖累身邊的人，也讓在乎他的人因此擔心憂慮，這麼做等於是將所有他能接觸到的人們一起拖向更糟糕的境地。
 
