--- a/content/秩序是靈魂的第一需要.md
+++ b/content/秩序是靈魂的第一需要.md
@@ -36,7 +36,7 @@ tags:
 
 ## 道德是社會秩序的基石
 
-雖然余杰的論述是針對以基督教建國的美國社會，但是同理亦適用於其他社會：**個人品格和公共德性必是社會秩序的基石**——我們必須能為了他人、為了群體、為了未來（亦即[另一種形式的群體](別低估你今天可以做對的事.md)）去限縮自身、接受制約，才可能玩得起自由、民主、法治、乃至於商業、金融的遊戲。
+雖然余杰的論述是針對以基督教建國的美國社會，但是同理亦適用於其他社會：**個人品格和公共德性必是社會秩序的基石**——我們必須能為了他人、為了群體、為了未來（亦即另一種形式的群體）去限縮自身、接受制約，才可能玩得起自由、民主、法治、乃至於商業、金融的遊戲。
 
 知名社會科學家法蘭西斯．福山就在《**信任：社會德性與繁榮的創造**》中提出：一個社會的「**自發社交性**」強健與否，決定了人們是否能信任親族之外的人、順暢進行大規模合作、創造更具規模的經濟組織。福山認為，「信任」這個社會資本是難以透過政策去建立的，只可能從本身的文化土壤中、以普遍道德的形式生長出來。雖然文化與道德絕非經濟活動的首要決定因素，但也絕對是各種社會活動底下的根本結構，根本性地影響著人與人之間的互動方式——福山的觀點與柯克殊途同歸。
 
@@ -70,7 +70,7 @@ tags:
 
 ## 檢討秩序的起點
 
-**[價值階級](「價值階級」與社會的組成)，就是辨認某些事物比其他事物更重要。一個社會要能建立秩序，需要大部分的成員都同意一套共同的價值階級，讓人們能夠為他們同樣重視的東西共同努力、避開不夠重要的活動、甚至懲罰那些有違共同價值的行為。**
+**[價值階級](「價值階級」之於個人和社會.md)，就是辨認某些事物比其他事物更重要。一個社會要能建立秩序，需要大部分的成員都同意一套共同的價值階級，讓人們能夠為他們同樣重視的東西共同努力、避開不夠重要的活動、甚至懲罰那些有違共同價值的行為。**
 
 然而歷史告訴我們，社會的尺規並非總是理想美好的東西，許多時候它更是個不得不將人類靈魂削足適履的生硬規範。我們都知道秩序有可能替暴君背書、長久傳承的價值也可能迫害個人。
 
