--- a/content/積極且審慎地參與社會.md
+++ b/content/積極且審慎地參與社會.md
@@ -9,7 +9,7 @@ tags:
 ---
 ## 立志於你能設想的最崇高目標
 
-[在我們生活中的每一刻，都存在著一系列截然不同的可能性等待我們將之化為現實](別低估你今天可以做對的事)：你可以選擇有酒今醉或未雨綢繆、可以選擇擁護私利或奉獻他人、可以選擇安逸怠惰或積極進取。而你抉擇的每一個行動，都會將一系列的可能性收斂於一個無法逆轉的現實。這些抉擇累積成為我們每一個人肩上背負的因與果，確實地影響著你我的每一刻當下、以及自己與周遭他人的未來。
+在我們生活中的每一刻，都存在著一系列截然不同的可能性等待我們將之化為現實：你可以選擇有酒今醉或未雨綢繆、可以選擇擁護私利或奉獻他人、可以選擇安逸怠惰或積極進取。而你抉擇的每一個行動，都會將一系列的可能性收斂於一個無法逆轉的現實。這些抉擇累積成為我們每一個人肩上背負的因與果，確實地影響著你我的每一刻當下、以及自己與周遭他人的未來。
 
 而我們是否能立志於每一個當下得以設想到的最崇高目標呢？之所以用「崇高」這個字，是因為我想要提醒我們從道德的立足點去眺望這個目標。相較於一個單純在高度上很「高」、幅員上很「大」、數據上很「優異」的目標，「崇高」這個字迫使我們跳脫效益的算計、納入他人的視角、尋求自己的良心、探問何謂「應然(Ought to)」，並依內心的答案去行動。
 
@@ -33,7 +33,7 @@ tags:
 
 正直誠實的言行，意味著在漫長人生中的每一段關係、每一項職責、每一次與他人的交際應對，都盡力去思考自身言行對長遠未來的影響、有意識地維繫你所處社群的信任感，並致力去強化、或至少試著去團結你和他人之間的共同價值。**我們知道自己應該做的，就要身體力行去行動；我們嘴裡說出來的，應該要有所省思與節制，只講我們有審慎思考、真正相信的話。**
 
-生命中每一次跟他人的交流假如都是一場比賽，結果可能有輸有贏、有進退有言和，那麼無論我們會不會再見到對方、他人會不會發現，都應該秉持公正、自重的態度，尊敬對手、比賽、和規則，以[運動家精神](別低估你今天可以做對的事.md)去參與整個過程，而非不計手段去贏得勝利、甚至不惜欺詐取巧。
+生命中每一次跟他人的交流假如都是一場比賽，結果可能有輸有贏、有進退有言和，那麼無論我們會不會再見到對方、他人會不會發現，都應該秉持公正、自重的態度，尊敬對手、比賽、和規則，以運動家精神去參與整個過程，而非不計手段去贏得勝利、甚至不惜欺詐取巧。
 
 行為是相對容易被檢視的，但言詞往往卻是法律難以管轄的範圍，得靠著更具體的價值典範、或者該說道德觀整體，去有效地約束和提升，而我們千萬不可輕忽言詞的重要、應該慎重對待。
 
@@ -57,7 +57,7 @@ tags:
 
 說到這裡，肯定有人會問「為什麼我需要這麼做？為什麼要活得這麼累？」
 
-我的回答是，假如你我的生命確實僅有此世，假如不管向左向右你都會替自己找一種更好更值得的方式活下去、而且也已經在這麼做，假如我們終其一生仍需要追尋那份[活著的意義](「樂觀虛無主義」與生命意義)、無論是什麼能夠讓我們覺得自己沒有白來一遭，那麼為什麼不選擇將這個策略貫徹到底呢？
+我的回答是，假如你我的生命確實僅有此世，假如不管向左向右你都會替自己找一種更好更值得的方式活下去、而且也已經在這麼做，假如我們終其一生仍需要追尋[那份活著的意義](「樂觀虛無主義」與生命意義)、無論是什麼能夠讓我們覺得自己沒有白來一遭，那麼為什麼不選擇將這個策略貫徹到底呢？
 
 設定崇高目標並為之努力，並不是要你樂意成為他人的奴役、勇於自我犧牲的傻子，這只是更具體地彰顯了你我內心都已經存在的那份向善的力量、以及對意義的追求；這只是用更清晰篤定的口吻去詮釋我們已經在日常生活中為自己的生活、家人的幸福、工作的突破、社會的參與所做的所有努力——這就是許多人一直在做的，只不過我們經常沒有思考透徹、搞清楚背後的原因與意義，所以就有可能目光短淺、失焦於眼前景況、做出對長遠未來無益的決定。
 
