--- a/content/道德，是群體的跨期福祉問題.md
+++ b/content/道德，是群體的跨期福祉問題.md
@@ -63,4 +63,4 @@ tags:
 
 因此在實踐上，我們應當經常省思自身言行是否可能更周全地考慮群體的跨期福祉，倚靠我們有限智識在每個當下能夠想到的最佳答案去生活，並透過人生經驗的累積、一點一滴地拓展自己所能納入考慮的時間向度及群體範圍——可以說，這就是「智慧」的技術性定義。
 
-[下篇](犧牲與救贖.md)
+[續](犧牲與救贖.md)
