--- a/content/生命權（反墮胎）論點.md
+++ b/content/生命權（反墮胎）論點.md
@@ -31,7 +31,7 @@ tags:
 
 那麼，這位婦女現在在考慮墮胎的事實，等同於承認了有另一個身體存在。那麼我們該問的是，那「另一個身體」的身體自主權呢？那個人類的選擇呢？我確實可以選擇把我的身體放到墮胎醫生的桌上，這是一個選擇，然而當我懷孕了，這件事情就會影響另一個身體。如果我相信一個人的身體權利，我就需要保護那個尚未出生的人的身體權利。
 
-婦女在懷孕時的所有生理反應，都是因為有另一個身體的存在。如果這裡存在著另一個身體，那麼我們怎麼對待這個身體、跟我們「應該」對待這個身體，就存在著重要的區別。如果真的要，我幾乎「可以」做任何事情，但我們真正該問的是，某些事情是否是我們身在一個相信人人生而平等、相信基本人類生命權的文明社會中「應該」做的事？
+婦女在懷孕時的所有生理反應，都是因為有另一個身體的存在。如果這裡存在著另一個身體，那麼我們怎麼對待這個身體、跟我們「應該」對待這個身體，就存在著重要的區別。如果真的要，我幾乎「可以」做任何事情，但我們真正該問的是，[某些事情是否是我們身在一個相信人人生而平等、相信基本人類生命權的文明社會中「應該」做的事](「神聖個人」作為人類世界的基石)？
 
 ## 回應「胚胎非人類」論點
 
