--- a/content/道德的情境與潛能.md
+++ b/content/道德的情境與潛能.md
@@ -5,12 +5,6 @@ tags:
 - 時間偏好
 - 道德
 ---
-人應該如何生活？
-
-假如我們能同意每個人都是[存在著絕對價值的個體](「神聖個人」作為人類世界的基石)、每個人都[追尋著一份生命的意義](「樂觀虛無主義」與生命意義.md)、每個人都[背負著善待自己的責任](盡責地善待自己)，那麼「如何生活」會是我們下一個應該提出的問題。即使我們完全不花一丁點時間去考慮這個問題，也仍然是任由某種已經習慣奉行的模式宰制自己每一天的時間。可想而知，我們選擇如何生活絕非是微不足道的小事。
-
----
-
 ## 及時行樂 vs 延遲享樂
 
 人是動物、是生物驅力和原始慾望的容器、是血和肉和骨和承襲了七百萬年的演化心理的組成物；人亦是超越動物的神性載體、是理性和自我意識的駕駛、是地球上唯一被「時間」束縛的生物。人的存在，是獸性和神性的矛盾、拉扯、調節、與融合。
@@ -89,7 +83,7 @@ tags:
 
 從反面切入，我們可以參考孟子的說法：「人之所以異於禽獸者，幾希，庶民去之，君子存之。」這是說人與禽獸之間的差異就這麼一點點——這一點點正是我們具備的道德之心。若我們背離了道德追求、放棄了道德潛能的實踐，我們就稱不上是人，而與禽獸無異了。對儒家而言，堅守這條人類自我形象的底線，是不證自明的公理。
 
-從正面思考，我會[重申](盡責地善待自己)這點：**在我們企望著意義的生命中，不容忽視的是你我所秉持的理想、以及我們為達至理想所採取的行動**。講白話點，如果你心中沒有一個值得前進的理想——理想的自我、或者身處在理想的人生風景中的自己（亦即另一種形式的理想自我）——並且為之付出像樣的努力，那麼要看見自己活著的意義，肯定會是個難題。
+從正面思考，我會重申這點：**在我們企望著意義的生命中，不容忽視的是你我所秉持的理想、以及我們為達至理想所採取的行動**。講白話點，如果你心中沒有一個值得前進的理想——理想的自我、或者身處在理想的人生風景中的自己（亦即另一種形式的理想自我）——並且為之付出像樣的努力，那麼要看見自己活著的意義，肯定會是個難題。
 
 正因為你我生來都帶著這份道德潛能、而德性作為理想卻是幾乎不可能被迄及的，這個**在「潛能」與「理想」間的遙遠距離，反而更凸顯了追求德性的崇高與深刻，以及人類在這條漫長路途上的無限可能**。就跟長跑——[這個專屬人類的運動方式](https://www.natgeomedia.com/environment/article/content-1823.html)——一樣，人類從沒有達到一個特定里程而從此開心佇足不再前進，反倒鍥而不捨地探索更遠的距離、更艱困的路途、更看似不可能的目標，而長跑的意義也正是由此彰顯。同樣地，既然人人皆有道德的潛能與傾向，那麼在道德上的追求和實踐就必定是為你我生命帶來豐富意義的重要旅程，無論我們此生能否看見終點。
 
