--- a/content/📝/「信仰」作為生命的基本態度.md
+++ b/content/📝/「信仰」作為生命的基本態度.md
@@ -1,9 +1,12 @@
-tags: #📝️/🌲️ #📢 
-links: [[Morality]]、[[Christianity]]、[[Meaning]]、[[Nihilism]]
-ref:
-[[後現代的價值真空]]
-[[對意義的渴望]]
-
+---
+title: "「信仰」作為生命的基本態度"
+status: 🌲️
+draft: 
+tags:
+- Morality
+- Christianity
+- Meaning
+- Nihilism
 ---
 弗洛姆在《自我的追尋》（Man For Himself）裡這麼說：
 
@@ -36,3 +39,8 @@ There was once in man a true happiness of which there now remains to him only; t
 而這些深刻的自我追尋，都必須由一個人信仰的核心價值所驅使，足見「信仰」作為生命的基本態度，是通往一個具備絕對意義的人生的起點。
 
 >人活著不能沒有信仰。我們這一代以及後代的關鍵問題在於：這個信仰究竟會成為對領袖、機械、成功的非理性信仰，或者是基於我們自身創造性活動所產生的理性信仰。
+
+---
+See also:
+[[後現代的價值真空]]
+[[對意義的渴望]]
