--- a/content/📝/「生命意義」問題的本質.md
+++ b/content/📝/「生命意義」問題的本質.md
@@ -1,8 +1,11 @@
-tags: #📝️/🌲️ #📢 
-links: [[Nihilism]]、[[Meaning]]、[[Philosophy]]、[[Technology]]、[[]]、[[]]
-ref: 
-[[對意義的渴望]]
-
+---
+title: "「生命意義」問題的本質"
+status: 🌲️
+tags: 
+- Nihilism
+- Meaning
+- Philosophy
+- Technology
 ---
 如果追根究底，其實不難發現[「樂觀虛無主義」](https://www.youtube.com/watch?v=MBRqu0YOH14)在語意上是個矛盾的概念。
 
@@ -23,3 +26,7 @@ ref:
 綜合上述，其實「生命意義」的問題打從一開始就不是純粹的「實然」問題、不是一個能被客觀觀察的科學事實；發現人類在宇宙中的渺小進而相信人生並無意義，那也只是你對生命意義的主觀詮釋。
 
 「意義」是一個存在於「應然」的、我們摸不著也看不見的信念，但它能具體地指引你我每分每秒的優先次序、情緒感受、時間分配。看見生命的意義與否，能決定一個人選擇耽溺自艾和寬宏堅毅，繼而用非常實質的方式影響他和他周遭他人的生命經驗——這個你我都能親自驗證的區別，向我們證明了「意義」的「真實」。
+
+---
+See also: 
+[[對意義的渴望]]
