--- a/content/「價值階級」之於個人和社會.md
+++ b/content/「價值階級」之於個人和社會.md
@@ -4,6 +4,8 @@ draft:
 tags: 
 - 社會
 - 道德
+created: 2023-02-23
+updated: 2023-02-23
 ---
 人是社會性的動物，人活著就不可能擺脫與其他人的交流互動，亦不可能對自己所處社群的重要性目盲。更多時候，我們與他人的關係才是形塑你我的自我認知、以及生命意義的來源。
 
