--- a/content/「紅藥丸」與男性的生命責任.md
+++ b/content/「紅藥丸」與男性的生命責任.md
@@ -7,6 +7,8 @@ tags:
 - 婚姻
 - 責任
 - 個人生活
+created: 2023-02-23
+updated: 2023-02-23
 ---
 *作者按：這是篇封存兩年的舊文。時至今日，華文界看來已經不再流行「紅藥丸」一流（或至少沒有流行到引起我的注意），所以在一定程度上本文已是篇過時的評論，部份書寫亦嫌凌亂不嚴謹。不過文章後半部的論點仍是我至今秉持的重要信念，對我個人而言仍有分享和自我提醒的價值。假如這篇不符時勢的文章無法為你帶來啟發，但願也能有些娛樂價值。*
 
