--- a/content/別把「沒有對方也活得下去」當成經營感情的核心價值.md
+++ b/content/別把「沒有對方也活得下去」當成經營感情的核心價值.md
@@ -6,6 +6,8 @@ tags:
 - 愛情
 - 責任
 - 兩性
+created: 2023-02-23
+updated: 2023-02-23
 ---
 我身邊有幾個秉持進步觀念、強調獨立自我的年輕男女，相信在愛情中不應該「沒有對方就活不下去」，所以他們會盡力讓自己保有完整獨立的生活能力，亦可能過度保護自己的情感、避免過度依賴信任對方、減低自己情感上受傷的風險。
 
