--- a/content/氣候運動家是對民主的侮辱.md
+++ b/content/氣候運動家是對民主的侮辱.md
@@ -5,6 +5,8 @@ tags:
 - 能源
 - 政治
 - 社會
+created: 2023-02-23
+updated: 2023-02-23
 ---
 本文編譯自[How Greta serves the elites - Climate activists are an insult to democracy](https://unherd.com/2021/11/how-greta-serves-the-elites/)。
 
