--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -6,6 +6,8 @@ tags:
 - 人性
 - 道德
 - 責任
+created: 2023-02-23
+updated: 2023-02-23
 ---
 對於所愛的人，我們為他們祈求的不會只是他們能享有「好的處境」，更是他們得以成為「能承擔更艱難處境的自己」。我們用這個方針去鼓勵、引導、指正、鞭策我們在乎的親人和朋友，因為我們總是知道，你我都無法百分之百地保護任何人免於生命的頓挫和苦難。真正為他們好的唯一方式，是幫助他們成為更堅毅的自己。
 
