--- a/content/為受難者祈禱的真正意義.md
+++ b/content/為受難者祈禱的真正意義.md
@@ -4,8 +4,8 @@ draft:
 tags: 
 - 基督教
 - 道德
-created: 2023-02-23
-updated: 2023-02-23
+date: 2023-02-23
+lastmod: 2023-02-23
 ---
 無論在世上的哪個角落，當我們聽聞發生了重大災禍、奪走許多寶貴生命，驚愕痛心之餘，也往往會聽到一些宗教組織發起為罹難者集體祈禱致意的活動。秉持無神論或對組織宗教不帶好感的外人，可能會對組織宗教的這種行為嗤之以鼻，因為顯而易見地，祈禱並不會改變已經發生的憾事，也沒有真的幫上任何一點忙。更多時候，只是讓那些迷信之人誤以為自己不費吹灰之力就做了某種像樣的好事，值得他們堂而皇之地嘉許自己的美德。
 
