--- a/content/「信仰」作為生命的基本態度.md
+++ b/content/「信仰」作為生命的基本態度.md
@@ -5,8 +5,8 @@ tags:
 - 基督教
 - 生命
 - 社會
-created: 2023-02-23
-updated: 2023-02-23
+date: 2023-02-23
+lastmod: 2023-02-23
 ---
 弗洛姆在《自我的追尋》（Man For Himself）裡這麼說：
 
