--- a/content/「樂觀虛無主義」與生命意義.md
+++ b/content/「樂觀虛無主義」與生命意義.md
@@ -3,8 +3,8 @@ title: "「樂觀虛無主義」與生命意義"
 draft: 
 tags: 
 - 生命
-created: 2023-02-23
-updated: 2023-02-23
+date: 2023-02-23
+lastmod: 2023-02-23
 ---
 我曾經深信人類在浩瀚宇宙中只不過是個偶然的出現、宗教和傳統對人類價值的答案早已過時、你我的存在並沒有根本性的目的。
 
