--- a/content/道德的情境與潛能.md
+++ b/content/道德的情境與潛能.md
@@ -4,8 +4,8 @@ draft:
 tags: 
 - 時間偏好
 - 道德
-created: 2023-02-23
-updated: 2023-02-23
+date: 2023-02-23
+lastmod: 2023-02-23
 ---
 ## 及時行樂 vs 延遲享樂
 
