--- a/content/「神聖個人」作為人類世界的基石.md
+++ b/content/「神聖個人」作為人類世界的基石.md
@@ -38,7 +38,7 @@ lastmod: 2023-02-23
 
 西方社會強烈的個體主義——我會說它是廣義的「神聖個人」觀念——在兩希文化中更被基督宗教所凸顯，其最明確的根源之一，是聖經、創世記1章27節：
 
->上帝就照著自己的形像造人，乃是照著祂的形像造男造女。
+>[上帝](筆記：神、基督教)就照著自己的形像造人，乃是照著祂的形像造男造女。
 
 這段話開門見山地闡明了人與神的關係、以及人類在宇宙中獨一無二的重要地位。在信上帝的社會裡，就因如此、亦僅需如此，每一個人的生命就有了其不可剝奪的神聖價值、有了其不證自明的存在目的。它說明了每一個人都是盛裝神性的容器、擁有實踐德行與榮耀上帝的潛能，所以背負著使世界變得更好的道德義務。近代習以為常的「天賦人權」觀念可說就是起源自此。
 
