--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -50,7 +50,7 @@ other = "Search Icon"
 other = "Icon to open search"
 
 [recent_notes]
-other = "Recent Writings"
+other = "Recent Updates"
 
 [first_3_notes]
 other = "first 3 {{ .notes }}"
