--- a/content/化石燃料是大規模的人類存亡問題.md
+++ b/content/化石燃料是大規模的人類存亡問題.md
@@ -1,7 +1,9 @@
 ---
 title: "化石燃料是大規模的人類存亡問題"
 aliases: 
-tags: 能源 科技
+tags:
+- 能源
+- 科技
 draft: 
 date: 2023-02-26
 lastmod: 2023-02-26
@@ -28,6 +30,6 @@ lastmod: 2023-02-26
 
 所謂「不可能存在」，並不是像許多氣候運動人士企圖打迷糊仗的，只是要大家勒緊褲帶、每個月多付一點點的綠能電費、將就住小一點的房子，而是實際上，世界上大量的人——新生兒、老年人、落後地區的人——將沒有足夠的食物、醫療、庇護能賴以生存，而住在先進國家的我們所習慣看見和觸摸的那些生活必需品及便捷設施，也將蕩然無存。
 
-我沒有理由不希望氣候和能源問題只是聯合國每年時間到了讓Greta出來臉色難看地喊喊話、各國政府自己識相地開源節流就能夠度過的難關，但很顯然，這個問題比我們所希冀的還要複雜萬分，我們必須從更廣更深的層面去著手，考慮某些或許不是這麼直觀淺顯的解決方案。
+我沒有理由不希望氣候和能源問題只是聯合國每年時間到了[讓Greta出來臉色難看地喊喊話](氣候運動家是對民主的侮辱)、各國政府自己識相地開源節流就能夠度過的難關，但很顯然，這個問題比我們所希冀的還要複雜萬分，我們必須從更廣更深的層面去著手，考慮某些或許不是這麼直觀淺顯的解決方案。
 
 而事實是，**化石燃料的運用，就是大規模的人類存亡問題**。在這個問題上，我們沒有任何一個人有資格決定今天該在破爛的醫院裡、空蕩的碗盆前、肆虐的天災中死去的，是別人的父母、手足、朋友、和孩子，而不是我們自己。
