--- a/content/化石燃料是大規模的人類存亡問題.md
+++ b/content/化石燃料是大規模的人類存亡問題.md
@@ -8,6 +8,10 @@ draft:
 date: 2023-02-26
 lastmod: 2023-02-26
 ---
+本文資料來自[The Modern World Can't Exist Without These Four Materials | Time](https://time.com/6175734/reliance-on-fossil-fuels/)。
+
+---
+
 現代社會不可或缺、但氣候運動家乃至普羅大眾都往往未曾聽聞、或在討論環境和氣候議題時經常樂意忽略的四大要素，是**氨、塑膠、鋼鐵、及水泥**。
 
 就產量排名，每年全世界生產約45億噸的水泥、18億噸的鋼鐵、將近4億噸的塑膠、和1.8億噸的氨。但氨其實是最重要的要素：它是氮肥的合成基礎。若無氮肥，我們將連現今近80億人口的一半都不可能養活。（其中中國尤其仰賴它。）
